400E fix some issues

--- a/zh-CN/7.reference/3.performance-tuning-guide/5.sql-optimization/4.sql-optimization/3.monitor-sql-execution-performance/3.plan-cache-view.md
+++ b/zh-CN/7.reference/3.performance-tuning-guide/5.sql-optimization/4.sql-optimization/3.monitor-sql-execution-performance/3.plan-cache-view.md
@@ -14,7 +14,7 @@
 | SQL_NUM      | BIGNIT(38)   | NUMBER(38)   | `plan_cache` 涉及 SQL 条数              |
 | MEM_USED     | BIGNIT(38)   | NUMBER(38)   | `plan_cache` 已经使用的内存                |
 | MEM_HOLD     | BIGNIT(38)   | NUMBER(38)   | `plan_cache` 持有的内存                  |
-| ACCESS_COUNT | BIGNIT(38)   | NUMBER(38)   | 访问 `plan_cache` 的次数                 |
+| ACCESS_COUNT | BIGNIT(38)   | NUMBER(38)   | 查询访问 `plan_cache` 的次数                 |
 | HIT_COUNT    | BIGNIT(38)   | NUMBER(38)   | 命中 `plan_cache` 的次数                 |
 | HIT_RATE     | BIGNIT(38)   | NUMBER(38)   | `plan_cache` 的命中率                   |
 | PLAN_NUM     | BIGNIT(38)   | NUMBER(38)   | Plan 的个数                            |
