--- a/zh-CN/7.reference/5.system-reference/4.system-view-of-mysql-mode/3.performance-view-of-mysql-mode/66.v-plan_cache_stat-of-mysql-mode.md
+++ b/zh-CN/7.reference/5.system-reference/4.system-view-of-mysql-mode/3.performance-view-of-mysql-mode/66.v-plan_cache_stat-of-mysql-mode.md
@@ -25,7 +25,7 @@ GV$OB_PLAN_CACHE_STAT
 | SQL_NUM      | bigint(20)  | NO         | plan_cache 涉及 SQL 条数              |
 | MEM_USED     | bigint(20)  | NO         | plan_cache 已经使用的内存                |
 | MEM_HOLD     | bigint(20)  | NO         | plan_cache 持有的内存                  |
-| ACCESS_COUNT | bigint(20)  | NO         | 进行 plan_cache 的次数                 |
+| ACCESS_COUNT | bigint(20)  | NO         | 查询访问 plan_cache 的次数                 |
 | HIT_COUNT    | bigint(20)  | NO         | 命中 plan_cache 的次数                 |
 | HIT_RATE     | bigint(20)  | NO         | plan_cache 的命中率                   |
 | PLAN_NUM     | bigint(20)  | NO         | plan 的个数                          |
