--- a/zh-CN/7.reference/5.system-reference/5.system-view-of-oracle-mode/3.performance-view-of-oracle-mode/60.v-plan_cache_stat-of-oracle-mode.md
+++ b/zh-CN/7.reference/5.system-reference/5.system-view-of-oracle-mode/3.performance-view-of-oracle-mode/60.v-plan_cache_stat-of-oracle-mode.md
@@ -18,7 +18,7 @@ V$OB_PLAN_CACHE_STAT
 | SQL_NUM      | NUMBER(38)   | NO             | plan_cache 涉及 SQL 条数              |
 | MEM_USED     | NUMBER(38)   | NO             | plan_cache 已经使用的内存                |
 | MEM_HOLD     | NUMBER(38)   | NO             | plan_cache 持有的内存                  |
-| ACCESS_COUNT | NUMBER(38)   | NO             | 进行 plan_cache 的次数                 |
+| ACCESS_COUNT | NUMBER(38)   | NO             | 查询访问 plan_cache 的次数                 |
 | HIT_COUNT    | NUMBER(38)   | NO             | 命中 plan_cache 的次数                 |
 | HIT_RATE     | NUMBER(38)   | NO             | plan_cache 的命中率                   |
 | PLAN_NUM     | NUMBER(38)   | NO             | plan 的个数                          |
