--- a/zh-CN/9.release-notes/101.enterprise-edition-history-release/101.V3.2/95.ob-324.md
+++ b/zh-CN/9.release-notes/101.enterprise-edition-history-release/101.V3.2/95.ob-324.md
@@ -286,7 +286,7 @@ OceanBase 数据库 V3.2.4 推荐使用的平台工具版本如下。
 
 ### 缺陷修复
 
-* 修复 在列 C1、C2、C3 上存在索引时 ，SQL 中包含 `(C1 = ？ OR C1 = ？...) AND C2 IN (...) AND  C3 ...` 条件的场景下，范围抽取错误，导致可能出现结果错误的问题。
+* 修复在列 C1、C2、C3 上存在复合索引时 ，SQL 中包含 `(C1 = ？ OR C1 = ？...) AND C2 IN (...) AND  C3 ...` 条件的场景下，范围抽取错误，导致可能出现结果错误的问题。
 * 修复 PL 中的 DML 使用 SUBSTRB 函数，参数有 PL 内定义的变量时，报错 `ORA-00600: internal error code, arguments: -4016, Internal error` 的问题。
 * 修复 Oracle 模式下，把 PACKAGE 变量做为内部调用的出参场景，存储过程执行结果与原生 Oracle 不兼容的问题。
 * 修复在表达式预计算期间，UPDATE IGNORE 未处理时，导致获取计划时间过长的问题。
