--- a/zh-CN/6.manage/4.high-availability/4.arbitration-high-availability/2.enable-the-arbitration-service.md
+++ b/zh-CN/6.manage/4.high-availability/4.arbitration-high-availability/2.enable-the-arbitration-service.md
@@ -1,5 +1,10 @@
 # 开启仲裁服务
 
+<main id="notice" >
+<h4>功能适用性</h4>
+<p>该内容仅适用于 OceanBase 数据库企业版。OceanBase 数据库社区版暂不支持仲裁服务功能。</p>
+</main>
+
 您可以在创建租户时即为租户开启仲裁服务，如果未开启，也可以待租户创建成功后，为租户开启仲裁服务。本节主要介绍如何为已有租户开启仲裁服务。
 
 ## 前提条件
