--- a/zh-CN/6.manage/4.high-availability/4.arbitration-high-availability/5.replace-the-arbitration-service.md
+++ b/zh-CN/6.manage/4.high-availability/4.arbitration-high-availability/5.replace-the-arbitration-service.md
@@ -1,5 +1,10 @@
 # 替换仲裁服务
 
+<main id="notice" >
+<h4>功能适用性</h4>
+<p>该内容仅适用于 OceanBase 数据库企业版。OceanBase 数据库社区版暂不支持仲裁服务功能。</p>
+</main>
+
 当仲裁服务所在的机器故障时，可以在新的机器上部署仲裁服务后替换故障的仲裁服务。
 
 ## 前提条件
