--- a/zh-CN/6.manage/4.high-availability/4.arbitration-high-availability/6.remove-the-arbitration-service.md
+++ b/zh-CN/6.manage/4.high-availability/4.arbitration-high-availability/6.remove-the-arbitration-service.md
@@ -1,5 +1,10 @@
 # 删除仲裁服务
 
+<main id="notice" >
+<h4>功能适用性</h4>
+<p>该内容仅适用于 OceanBase 数据库企业版。OceanBase 数据库社区版暂不支持仲裁服务功能。</p>
+</main>
+
 如果不需要再使用仲裁服务，可以将仲裁服务从集群中删除。
 
 ## 前提条件
