--- a/zh-CN/6.manage/4.high-availability/4.arbitration-high-availability/1.arbitration-service-overview.md
+++ b/zh-CN/6.manage/4.high-availability/4.arbitration-high-availability/1.arbitration-service-overview.md
@@ -1,5 +1,10 @@
 # 仲裁服务概述
 
+<main id="notice" >
+<h4>功能适用性</h4>
+<p>该内容仅适用于 OceanBase 数据库企业版。OceanBase 数据库社区版暂不支持仲裁服务功能。</p>
+</main>
+
 OceanBase 数据库在当前版本引入了仲裁服务（Arbitratrion Service），不仅可以解决两地三中心同城副本故障时 RT 变大的问题，还能降低跨城带宽开销，并将第三机房的成本降到极低。
 
 仲裁服务中维护着租户日志流对应的仲裁成员，仲裁成员具备如下特征：
