--- a/zh-CN/6.manage/4.high-availability/4.arbitration-high-availability/3.disable-the-arbitration-service.md
+++ b/zh-CN/6.manage/4.high-availability/4.arbitration-high-availability/3.disable-the-arbitration-service.md
@@ -1,5 +1,10 @@
 # 关闭仲裁服务
 
+<main id="notice" >
+<h4>功能适用性</h4>
+<p>该内容仅适用于 OceanBase 数据库企业版。OceanBase 数据库社区版暂不支持仲裁服务功能。</p>
+</main>
+
 开启仲裁服务后，可以根据业务需求关闭仲裁服务。
 
 ## 操作步骤
