--- a/zh-CN/6.manage/4.high-availability/4.arbitration-high-availability/4.modify-the-degradation-timeout.md
+++ b/zh-CN/6.manage/4.high-availability/4.arbitration-high-availability/4.modify-the-degradation-timeout.md
@@ -1,5 +1,10 @@
 # 修改降级触发的控制时间
 
+<main id="notice" >
+<h4>功能适用性</h4>
+<p>该内容仅适用于 OceanBase 数据库企业版。OceanBase 数据库社区版暂不支持仲裁服务功能。</p>
+</main>
+
 使用租户级的仲裁服务时，需要配置降级触发的控制时间。当半数 F 副本故障导致日志同步失败并且达到降级触发的控制时间时，仲裁服务会自动执行降级流程来恢复服务。自动降级的控制时间默认为 5s，该值也表示在出现机房故障时服务中断的时间。
 
 ## 操作步骤
