--- a/zh-CN/7.reference/2.sql-syntax/2.common-tenant-mysql-mode/6.sql-statement/39.load-data.md
+++ b/zh-CN/7.reference/2.sql-syntax/2.common-tenant-mysql-mode/6.sql-statement/39.load-data.md
@@ -29,9 +29,12 @@ LOAD DATA
 
 要从外部文件导入数据，您需要具有 `FILE` 权限。
 
->**注意**
->
->使用 `REPLACE` 或者 `IGNORE` 子句的情况下，如果并行度大于 `1`，发生冲突的行最后插入的记录可能与串行执行的结果不同。如果需要严格保证冲突记录的插入结果，请不要指定该语句的并行度（或将并行度设置为 `1`）。
+<main id="notice" type='notice'>
+   <h4>注意</h4>
+   <p>使用 <code>REPLACE</code> 或者 <code>IGNORE</code> 子句的情况下，如果并行度大于 1，发生冲突的行最后插入的记录可能与串行执行的结果不同。如果需要严格保证冲突记录的插入结果，请不要指定该语句的并行度（或将并行度设置为 1）。</p>
+</main>
+
+
 
 语法 
 -----------------------
