--- a/zh-CN/6.manage/5.security-and-permissions/6.security-audit/3.set-up-and-view-audit-rules.md
+++ b/zh-CN/6.manage/5.security-and-permissions/6.security-audit/3.set-up-and-view-audit-rules.md
@@ -29,7 +29,7 @@ obclient> AUDIT INSERT,UPDATE,DELETE ON user1.tbl1;
 
 | 字典视图     |  功能说明   |
 |-----------|--------|
-| [ALL_DEF_AUDIT_OPTS](../../../7.reference/5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/9.all_def_audit_opts-of-oracle-mode.md)  | 记录任何新创建对象的默认审计规则。每列的取值如下：<br> * `-/-`：默认不审计 <br> * `A/-`: 只在语句执行成功时审计  <br> `-/A`: 只在语句执行失败时审计 * `A/A`: 语句执行无论成功还是失败时都审计   |
+| [ALL_DEF_AUDIT_OPTS](../../../7.reference/5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/9.all_def_audit_opts-of-oracle-mode.md)  | 记录任何新创建对象的默认审计规则。每列的取值如下：<ul><li>  <code>-/-</code>：默认不审计 </li><li> <code>A/-</code>: 只在语句执行成功时审计 </li><li> <code>-/A</code>: 只在语句执行失败时审计 </li><li> <code>A/A</code>: 语句执行无论成功还是失败时都审计 </li></ul>  |
 | [DBA_STMT_AUDIT_OPTS](../../../7.reference/5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/100.dba_stmt_audit_opts-of-oracle-mode.md) | 记录语句级别审计的详细配置。  |
 | [DBA_OBJ_AUDIT_OPTS](../../../7.reference/5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/85.dba_obj_audit_opts-of-oracle-mode.md)  | 记录对象级别审计的详细配置。  |
 
