315：obcj change to mysqlcj

--- a/zh-CN/14.developer-guide/5.design-specifications-and-constraints/6.best-practices-for-database-design/2.development-framework-database-connection-example/2.example-for-connecting-to-springbatch.md
+++ b/zh-CN/14.developer-guide/5.design-specifications-and-constraints/6.best-practices-for-database-design/2.development-framework-database-connection-example/2.example-for-connecting-to-springbatch.md
@@ -44,8 +44,8 @@
 #yml文件：
 spring:
   datasource:
-    url: jdbc:oceanbase://10.100.xxx.xxx:18815/test
-    driver-class-name: com.alipay.oceanbase.jdbc.Driver
+    url: jdbc:mysql://10.100.xxx.xxx:18815/test
+    driver-class-name: com.mysql.jdbc.Driver
     username: admin@mysql
     password: ******
   jpa:
