--- a/zh-CN/14.developer-guide/5.design-specifications-and-constraints/6.best-practices-for-database-design/1.configuration-example-of-the-database-connection-pool/5.roxool-connection-pool-configuration-example.md
+++ b/zh-CN/14.developer-guide/5.design-specifications-and-constraints/6.best-practices-for-database-design/1.configuration-example-of-the-database-connection-pool/5.roxool-connection-pool-configuration-example.md
@@ -21,8 +21,8 @@
 
 ```java
 jdbc-1.proxool.alias=test
-jdbc-1.proxool.driver-class=com.alipay.oceanbase.jdbc.Driver
-jdbc-1.proxool.driver-url=jdbc:oceanbase://10.100.xxx.xxx:30035/test
+jdbc-1.proxool.driver-class=com.mysql.jdbc.Driver
+jdbc-1.proxool.driver-url=jdbc:mysql://10.100.xxx.xxx:30035/test
 jdbc-1.user=test@tt3
 jdbc-1.password=******
 
