--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/2.create-a-tenant.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/2.create-a-tenant.md
@@ -47,7 +47,7 @@ opt_set_sys_var:
 |--------------------------|--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
 | IF NOT EXISTS            | 可选参数，如果要创建的租户名已存在，并且没有指定 `IF NOT EXISTS`，则会出现错误。                 |
 | tenant_name              | 租户名的合法性和变量名一致，最长 128 个字符，字符只能是大小写英文字母、数字和下划线，而且必须以字母或下划线开头，并且不能是 OceanBase 数据库的关键字。 OceanBase 数据库中所支持的关键字请参见 MySQL 模式的 [预留关键字](../../../5.system-reference/8.reserved-keyword-of-mysql-mode.md) 和 Oracle 模式的 [预留关键字](../../../5.system-reference/9.reserved-keywords-of-oracle-mode.md)。       |
-| RESOURCE_POOL_LIST       | 创建租户时的必填项，创建租户时仅支持分配一个资源池。如果需要为租户添加多个资源池，则可以待租户创建成功后通过修改租户资源池的方式再进行添加。 </br><main id="notice" type='notice'><h4>注意</h4><p>在分配资源池时，普通租户的内存的最小规格由隐藏配置项 <code>__min_full_resource_pool_memory</code> 控制，默认值为 5G，取值范围为 [1073741824,+∞)。如果您希望创建一个租户进行非常简单的功能测试，可以修改参数 <code>alter system __min_full_resource_pool_memory</code> 的值为 1073741824 来允许以最小 1 GB 内存的规格创建租户。</p></main>        |
+| RESOURCE_POOL_LIST       | 创建租户时的必填项，创建租户时仅支持分配一个资源池。如果需要为租户添加多个资源池，则可以待租户创建成功后通过修改租户资源池的方式再进行添加。 </br><main id="notice" type='notice'><h4>注意</h4><p>在分配资源池时，普通租户的内存的最小规格由隐藏配置项 <code>__min_full_resource_pool_memory</code> 控制，默认值为 5G，取值范围为 [1073741824,+∞)。如果您希望创建一个租户进行非常简单的功能测试，可以通过 <code>ALTER SYSTEM SET __min_full_resource_pool_memory = '1073741824';</code> 语句修改参数的值为 1073741824 来允许以最小 1 GB 内存的规格创建租户。</p></main>        |
 | DEFAULT TABLEGROUP       | 用于指定租户默认的表组信息，`NULL` 表示取消默认表组。如果不指定，默认为 `NULL`。    |
 | COMMENT    | 指定对该租户的注释信息。           |
 | CHARACTER SET \| CHARSET | 指定租户的字符集。 </br>字符集相关的介绍信息请参见 [字符集](../../../4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/1.basic-elements-of-mysql-mode/3.character-set-and-collation-of-mysql-mode/2.character-set-of-mysql-mode.md)。                |
