--- a/zh-CN/7.reference/7.command-line-tools/11.cdc/3.oblogproxy/1.install-and-deploy-oblogproxy/1.install-and-deploy-oblogproxy-by-using-the-installation-package.md
+++ b/zh-CN/7.reference/7.command-line-tools/11.cdc/3.oblogproxy/1.install-and-deploy-oblogproxy/1.install-and-deploy-oblogproxy-by-using-the-installation-package.md
@@ -19,6 +19,11 @@ oblogproxy 能够解决网络隔离的情况下，订阅增量日志的需求，
     </ul>
   </main>
 
+### 安装java1.8+
+oblogproxy 依赖 java1.8+ ，否则使用flink等程序，将连接不通
+安装：yum install java-1.8.0-openjdk-devel.x86_64
+配置：添加JAVA_HOME 到 /etc/profile
+
 ### 下载安装 oblogproxy
 
 您可在 oblogproxy 开源社区中下载 [oblogproxy V1.1.0](https://github.com/oceanbase/oblogproxy/releases/tag/v1.1.0) 版本的压缩包。
