fix  aone issue

--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/59.load-data-of-mysql-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/59.load-data-of-mysql-mode.md
@@ -4,7 +4,7 @@
 
 该语句用于从外部导入数据。
 
-OceanBase 数据库中的 `LOAD DATA` 语句仅支持加载 OBServer 节点本地的输入文件。因此，用户需要在导入之前将文件拷贝到某台 OBServer 节点上。
+OceanBase 数据库中的 `LOAD DATA` 语句仅支持加载本地直连的 OceanBase 数据库的输入文件，用户需要在导入之前将文件拷贝当前 OBServer 节点上。
 
 <main id="notice" type='explain'>
  <h4>说明</h4>
@@ -78,8 +78,13 @@ LOAD DATA
    obclinet> \q
    Bye
    ```
+   <main id="notice" type='explain'>
+     <h4>说明</h4>
+     <p>由于 <code>secure_file_priv</code> 是 <code>GLOBAL</code> 变量，所以需要执行 <code>\q</code> 退出使之生效。</p>
+   </main>
 
-2. 从外部文件导入数据。
+
+2. 重连数据库后，从外部文件导入数据。
 
    ```shell
    obclient> LOAD DATA INFILE 'test.sql' INTO TABLE t1;
