fix  aone issue

--- a/zh-CN/7.reference/3.performance-tuning-guide/5.sql-optimization/4.sql-optimization/7.manage-execution-plans/2.plan-binding.md
+++ b/zh-CN/7.reference/3.performance-tuning-guide/5.sql-optimization/4.sql-optimization/7.manage-execution-plans/2.plan-binding.md
@@ -251,12 +251,12 @@ Query OK, 0 rows affected
 
 3. 确定生成的执行计划是否符合预期。
 
-   确定是通过绑定的 Outline 生成的计划后，需要确定生成的计划是否符合预期，可以通过查询 `GV$OB_PLAN_CACHE_PLAN_STAT` 表查看 `plan_cache` 中缓存的执行计划形状，具体查看方式可参考
+   确定是通过绑定的 Outline 生成的计划后，需要确定生成的计划是否符合预期，可以通过查询 `GV$OB_PLAN_CACHE_PLAN_EXPLAIN` 表查看 `plan_cache` 中缓存的执行计划形状，具体查看方式可参考
 
    [实时执行计划展示](../../2.sql-execution-plan/5.real-time-execution-plan-display.md)。
 
    ```sql
-   obclient> SELECT OPERATOR, NAME FROM oceanbase.GV$OB_PLAN_CACHE_PLAN_STAT 
+   obclient> SELECT OPERATOR, NAME FROM oceanbase.GV$OB_PLAN_CACHE_PLAN_EXPLAIN 
          WHERE TENANT_ID = 1001 AND IP = '10.1.1.1' 
           AND PORT = 30474 AND PLAN_ID = 17225;
    
