420 add RPC connection authentication

--- a/zh-CN/7.reference/5.system-reference/1.system-configuration-items/2.system-configuration-items-overview-list.md
+++ b/zh-CN/7.reference/5.system-reference/1.system-configuration-items/2.system-configuration-items-overview-list.md
@@ -223,6 +223,12 @@
 | [tcp_keepintvl](3.cluster-level-configuration-items/213.tcp_keepintvl.md)        | 用于设置开启客户端连接的探活机制后，前后两次探测之间的时间间隔，单位为秒。               |
 | [tcp_keepcnt](3.cluster-level-configuration-items/211.tcp_keepcnt.md)          | 用于设置关闭一个非活跃连接之前的最大重试次数。                             |
 
+### RPC 认证相关
+
+| 配置项名 | 功能描述 |
+|[rpc_client_authentication_method](3.cluster-level-configuration-items/281.rpc_client_authentication_method)| 用于设置 RPC 客户端的安全认证方式。 |
+|[rpc_server_authentication_method](3.cluster-level-configuration-items/282.rpc_server_authentication_method)| 用于设置 RPC 服务端的安全认证方式。 |
+
 ### 其他
 
 |                                        配置项名                                        |                                                        功能描述                                                         |
