V420newfeature-cancel_restore

--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/1.system-tenants/2.alter-system/19.restore.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/1.system-tenants/2.alter-system/19.restore.md
@@ -32,13 +32,17 @@ restore_action:
  /* 从备份目的端将需要的宏块数据从对应的全量备份和增量备份中恢复到备租户，并同步拉取和回放事务日志。*/
   RESTORE tenant_name FROM restore_path UNTIL restore_checkpoint 
          WITH 'pool_list=<pool_name>&primary_zone=<zone_name>';
+
+   /* 取消正在进行的租户恢复 */
+   CANCEL RESTORE dest_tenant_name;
+
 ```
 
 ## 参数解释
 
 |        **参数**      |       **描述**       |
 |----------------------|----------------------|
-| dest_tenant_name   | 指恢复的新租户的名称。 |
+| dest_tenant_name   | 指定要恢复或取消恢复的租户的名称。 |
 | uri                | 指备份时设置的数据备份路径 `backup_data_dest` 与日志归档路径 `log_archive_dest`，该值至少包含一条数据备份路径和一条日志归档路径，路径间用 `,` 分隔。    |
 | timestamp          | 指恢复指定时间戳，恢复到该时间点为止，且包括该 `timestamp` 位点，指定 `timestamp` 必须以 `=` 连接。`timestamp` 仅支持 `YYYY-MM-DD HH24:MI:SS.FF` 格式，精确到纳秒。|
 | scn_no                | 指恢复指定的 SCN，恢复到该 SCN 位点为止，且包括该 `scn` 位点，指定 `scn` 须以 `=` 连接。|
@@ -80,5 +84,12 @@ restore_action:
 
    ```sql
    obclient> ALTER SYSTEM RESTORE restore_oracle_tenant FROM 'file:///data/nfs/backup//ob_backup_oracle_tenant/archive,file:///data/nfs/backup//ob_backup_oracle_tenant/data' UNTIL TIME='2022-11-11 15:04:23.825558' with 'pool_list=small_pool_2&primary_zone=z1';
+   Query OK, 0 rows affected
+   ```
+
+* 取消正在进行的对 `mysql` 租户的恢复操作。
+  
+   ```shell
+   obclient> ALTER SYSTEM CANCEL RESTORE mysql;
    Query OK, 0 rows affected
    ```
