--- a/zh-CN/6.manage/5.security-and-permissions/3.access-control/4.1rpc-connection-authentication.md
+++ b/zh-CN/6.manage/5.security-and-permissions/3.access-control/4.1rpc-connection-authentication.md
@@ -1,11 +1,13 @@
 # RPC 连接认证
 
-## 升级
-
+## 功能简介
+<!-- 还在补充-->
 本方案支持灰度升级流程（分段平滑升级不影响业务进程），升级过程中，高版本与低版本的 OBServer 是相互兼容的。
 即高版本作为客户端能连入低版本服务端；同时低版本作为客户端也能连入高版本服务端。升级后，默认不开启 RPC 认证，需要手动开启。
 
-## 开启基于 SSL 握手的 RPC 认证
+## 使用示例
+
+此操作过程是基于 SSL 握手开启的 RPC 认证。
 
 1. 需要在安装目录下创建 wallet 文件夹并将证书和私钥文件放入该文件夹。证书和私钥文件包括根证书（ca.pem）、证书（server-cert.pem）、私钥（server-key.pem）三个文件。
 
@@ -19,19 +21,30 @@
      </ul>
    </main>
 
-1. 登录 OceanBase 数据库，依次执行如下命令。
+2. 登录 OceanBase 数据库，依次执行如下命令。
 
-   ```sql
-   --加载 RPC 认证相关的 SSL 配置。
-   ALTER SYSTEM SET ssl_client_authentication=True;
+   1. 加载 RPC 认证相关的 SSL 配置。有关开启 SSL 连接的更多信息，请参见 [ssl_client_authentication](../../../7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/194.ssl_client_authentication.md)。
 
-   --将客户端的认证方式设置为 SSL_NO_ENCRYPT。
-   ALTER SYSTEM SET rpc_client_authentication_method = 'SSL_NO_ENCRYPT';
+      ```sql
+      ALTER SYSTEM SET ssl_client_authentication=True;
+      ```
 
-   --[可选]服务端禁用 NONE。注意，服务端默认同时支持 NONE和 SSL_NO_ENCRYPT两种认证方式。
-   --对于安全要求比较高的场景，建议在服务端禁掉 NONE。
-   ALTER SYSTEM SET rpc_server_authentication_method = 'SSL_NO_ENCRYPT';
-   ```
+   2. 将客户端的认证方式设置为 `SSL_NO_ENCRYPT`。有关客户端认证的详细信息，请参见 [rpc_client_authentication_method](../../../7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/281.rpc_client_authentication_method.md)。
+
+      ```sql
+      ALTER SYSTEM SET rpc_client_authentication_method = 'SSL_NO_ENCRYPT';
+      ```
+
+   3. 将服务端的认证方式设置为 `NONE` 或 `SSL_NO_ENCRYPT`。有关服务端认证的详细信息，请参见 [rpc_server_authentication_method](../../../7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/282.rpc_server_authentication_method.md)。
+
+      ```sql
+      ALTER SYSTEM SET rpc_server_authentication_method = 'SSL_NO_ENCRYPT';
+      ```
+
+      <main id="notice" type='notice'>
+       <h4>注意</h4>
+       <p>对于安全要求比较高的场景，建议在服务端禁掉 NONE。</p>
+      </main>
 
 ## 注意事项
 
