--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/22.create-index-of-mysql-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/22.create-index-of-mysql-mode.md
@@ -44,10 +44,9 @@ column_name_list:
 |-----------------|---------------------------------------------------------------------------------------------------------------------------------|
 | index_name      | 指定要创建的索引名称。                                                                                                                     |
 | table_name      | 指过索引所属的表名。                                                                                                                      |
-| index_col_name  | 指定索引的列名，每个列名后都支持 ASC（升序），不支持 DESC（降序）。默认为升序。 建立索引的排序方式为：首先以 `index_col_name` 中第一个列的值排序；该列值相同的记录，按下一列名的值排序；以此类推。 |
 | key_part        | 创建（函数）索引。 |
 | index_col_name  | 指定索引的列名，每个列名后都支持 ASC（升序），不支持 DESC（降序）。默认为升序。 建立索引的排序方式为：首先以 `index_col_name` 中第一个列的值排序；该列值相同的记录，按下一列名的值排序；以此类推。 |
-| expr            | 表示合法的函数索引表达式，且允许是布尔表达式，例如 `c1=c1`。<br>**注意** OceanBase 数据库当前版本禁止创建生成列上的函数索引。             |
+| expr            | 表示合法的函数索引表达式，且允许是布尔表达式，例如 `c1=c1`。<br>**注意** OceanBase 数据库当前版本禁止创建生成列上的函数索引。函数索引所支持的表达式参见 [函数索引支持的系统函数列表](链接待补充) 。         |
 | column_name     | 用于创建索引的列名。                                                                                                                      |
 | length          | 对于字符串列，可以使用 `col_name(length)` 语法截取字符串的部分用于创建索引。 支持的数据类型有 `CHAR`、`VARCHAR`、`BINARY` 与 `VARBINARY`。              |
 | index_type      | 索引类型，只支持 `USING BTREE`，表示使用 B-Tree 索引。                                                                                          |
