--- a/zh-CN/6.manage/5.security-and-permissions/3.access-control/4.1rpc-connection-authentication.md
+++ b/zh-CN/6.manage/5.security-and-permissions/3.access-control/4.1rpc-connection-authentication.md
@@ -5,6 +5,15 @@
 本方案支持灰度升级流程（分段平滑升级不影响业务进程），升级过程中，高版本与低版本的 OBServer 是相互兼容的。
 即高版本作为客户端能连入低版本服务端；同时低版本作为客户端也能连入高版本服务端。升级后，默认不开启 RPC 认证，需要手动开启。
 
+## 限制条件
+
+OceanBase 数据库 V4.2.0 版本的 RPC 认证的功能，只有在启用 pkt-nio 网络框架后才能使用，即在开启 RPC 认证之前需要保证 _enable_pkt_nio 配置项设置为 True。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p><code>_enable_pkt_nio</code> 用于控制 RPC 网络框架 pkt-nio 的启用和关闭，默认值为 True。</p>
+</main>
+
 ## 使用示例
 
 此操作过程是基于 SSL 握手开启的 RPC 认证。
