--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/17.alter-tablegroup-of-mysql-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/17.alter-tablegroup-of-mysql-mode.md
@@ -2,28 +2,8 @@
 
 ## 描述
 
-该语句用来执行以下操作：
+该语句用于对一个表组增加多张表和修改表组的属性。
 
-* 对一个表组增加多张表。
-
-* 修改表组的分区规则。
-
-* 修改表组的 Locality 和 Primary Zone。
-
-* 添加和删除一级分区和二级分区。
-
-### 分区操作支持概览
-
-|            二级分区类型             | 添加一级分区 | 删除一级分区 | 添加二级分区 | 删除二级分区 |
-|-------------------------------|--------|--------|--------|--------|
-| Range Columns + Range Columns | 支持     | 支持     | 不支持    | 支持     |
-| Range Columns + List Columns  | 支持     | 支持     | 不支持    | 支持     |
-| Range Columns + Hash          | 支持     | 支持     | 不支持    | 不支持    |
-| Range Columns + Key           | 支持     | 支持     | 不支持    | 不支持    |
-| List Columns  + Range Columns | 支持     | 支持     | 不支持    | 支持     |
-| List Columns  + List Columns  | 支持     | 支持     | 不支持    | 支持     |
-| List Columns + Hash           | 支持     | 支持     | 不支持    | 不支持    |
-| List Columns + Key            | 支持     | 支持     | 不支持    | 不支持    |
 
 ## 语法
 
@@ -36,108 +16,199 @@
 * 修改表组的分区规则。
 
   ```sql
-  ALTER TABLEGROUP tablegroup_name alter_tablegroup_partition_option;
-  
-  alter_tablegroup_partition_option:
-      DROP PARTITION '(' name_list ')'
-    | ADD PARTITION opt_range_partition_list
+  ALTER TABLEGROUP tablegroup_name tablegroup_option;
+
+  tablegroup_option:
+      SHARDING = 'NONE' | 'PARTITION' | 'ADAPTIVE'
   ```
 
 
-* 添加非模板一级分区。
 
-  ```sql
-  ALTER TABLEGROUP tablegroup_name ADD PARTITION partition_options;
-  
-  partition_options:
-    {PARTITION partition_name VALUES LESS THAN range_partition_expr [tg_subpartition_option]
-       [,PARTITION partition_name VALUES LESS THAN range_partition_expr [tg_subpartition_option]]... }
-   |{PARTITION partition_name VALUES IN list_partition_expr [tg_subpartition_option]
-       [,PARTITION partition_name VALUES IN list_partition_expr [tg_subpartition_option]]...}
-  
-  tg_subpartition_option：
-    {SUBPARTITION subpartition_name VALUES LESS THAN range_partition_expr, ...}
-   |{SUBPARTITION subpartition_name VALUES IN list_partition_expr, ....}
-   |{SUBPARTITION subpartition_name, ....}
-  ```
-
-  <main id="notice" type='explain'>
-    <h4>说明</h4>
-    <p>如果对二级分区表组添加一级分区时，必须添加该一级分区下的二级分区。</p>
-  </main>
-  
-* 删除非模板一级分区。
-
-  ```sql
-  ALTER TABLEGROUP tablegroup_name
-  DROP PARTITION partition_name[,partition_name...];
-  ```
-
-* 删除非模板二级分区。
-
-  ```sql
-  ALTER TABLEGROUP tablegroup_name
-  DROP SUBPARTITION subpartition_name[,subpartition_name...];
-  ```
 
 ## 参数解释
 
 |      **参数**       |                                                       **描述**                                                        |
 |-------------------|---------------------------------------------------------------------------------------------------------------------|
-| tablegroup_name   | 指定表组。                                                                                                               |
-| table_name        | 表名。对一个表组增加多张表时，表与表之间以逗号（','）分隔。 当添加多个表时，允许表名重复。如果待添加的表已经属于 `tablegroup_name` 的表组，OceanBase 数据库不会报错。 |
-| partition_name    | 指定一级分区名。                                                                                                            |
-| subpartition_name | 指定二级分区名。                                                                                                            |
+| tablegroup_name            | 表组名称。对一个表组增加多张表时，表与表之间以逗号（','）分隔。当添加多个表时，允许表名重复。如果待添加的表已经属于待加入的表组，OceanBase 数据库不会报错。  |
+| SHARDING   | 表组的属性。如果不指定 `SHARDING` 属性，则默认创建 `ADAPTIVE` 的表组。`SHARDING` 取值如下：<ul><li>`NONE`：对加入表组的表没有限制。</li><li>`PARTITION`：加入表组的表对应的一级分区，需要与表组中所有表的一级分区的分区方式一致，包括分区类型、分区个数和分区 Value。</li><li>`ADAPTIVE`：加入表组的表对应的一级分区和二级分区，需要与表组中所有表的一级分区和二级分区的分区方式一致，包括分区类型、分区个数和分区 Value。</li></ul>相同的分区方式包括：<ul><li>分区类型相同（例如都是 Hash+Range 分区）。</li><li>如果是 Hash 分区，要求引用的列数相同，并且分区个数相同。</li><li>如果是 Range 分区，要求引用的列数相同，并且分区数相同，Range 分割点相同。</li></ul>对于二级分区，根据其分区类型，要求和上述一致。    |
 
 ## 示例
 
-* 创建表组 `tgh`
+* 创建名为 `tblgroup1` 的表组，其 `SHARDING` 属性为 `NONE`，并将分区表 `tbl1`和分区表 `tbl2` 加入到表组中。
 
-  ```sql
-  obclient> CREATE TABLEGROUP tgh  PARTITION BY HASH PARTITIONS 10;
+  ```shell
+  obclient> CREATE TABLEGROUP tblgroup1 SHARDING = 'NONE'; 
+  Query OK, 0 rows affected
+
+  obclient> CREATE TABLE tbl1(col1 INT,col2 varchar(50))
+      PARTITION BY LIST(col1) SUBPARTITION BY LIST COLUMNS(col2)
+        (PARTITION p0 VALUES in (01)
+           (SUBPARTITION mp0 VALUES in ('01'),
+            SUBPARTITION mp1 VALUES in ('02')),
+         PARTITION p1 VALUES in (02)
+            (SUBPARTITION mp3 VALUES in ('01'),
+             SUBPARTITION mp4 VALUES in ('02'))
+         );
+  Query OK, 0 rows affected
+
+  obclient> CREATE TABLE tbl2(col1 INT,col2 varchar(50))
+      PARTITION BY LIST(col1) SUBPARTITION BY LIST COLUMNS(col2)
+        (PARTITION p0 VALUES in (01)
+          (SUBPARTITION mp0 VALUES in ('01'),
+            SUBPARTITION mp1 VALUES in ('02')),
+         PARTITION p1 VALUES in (02)
+           (SUBPARTITION mp3 VALUES in ('01'),
+            SUBPARTITION mp4 VALUES in ('02'))
+         );
+  Query OK, 0 rows affected
+
+  obclient> ALTER TABLEGROUP tblgroup1 ADD tbl1,tbl2;
   Query OK, 0 rows affected
   ```
 
-* 创建 Range Columns + Range Columns 非模板二级分区，并向表组中添加一级分区。
-
-  ```sql
-  obclient> CREATE TABLEGROUP tg1
-        PARTITION BY RANGE COLUMNS 1
-         SUBPARTITION BY RANGE COLUMNS 1
-       (
-       PARTITION p0 VALUES LESS THAN (100)
-       ( SUBPARTITION sp0 VALUES LESS THAN (2020)
-       , SUBPARTITION sp1 VALUES LESS THAN  (2021)
-      , SUBPARTITION sp2 VALUES LESS THAN (2022)
-       , SUBPARTITION sp3 VALUES LESS THAN  (2023)
-       ),
-       PARTITION p1 VALUES LESS THAN (200)
-      ( SUBPARTITION sp4 VALUES LESS THAN (2020)
-       , SUBPARTITION sp5 VALUES LESS THAN  (2021)
-       , SUBPARTITION sp6 VALUES LESS THAN (2022)
-       , SUBPARTITION sp7 VALUES LESS THAN  (2023))
-      );
-  Query OK, 0 rows affected
+  由于 `tbl1` 和 `tbl2` 的分区方式一致，所以 `SHARDING` 属性可以更改为 `PARTITION` 或 `ADAPTIVE`。
   
-  obclient> ALTER TABLEGROUP tg1 ADD PARTITION (PARTITION p2 VALUES LESS THAN (300)
-         (SUBPARTITION sp8 VALUES LESS THAN (2020)
-        , SUBPARTITION sp9 VALUES LESS THAN  (2021))
-       );
+  ```shell
+  obclient> ALTER TABLEGROUP tblgroup1 SHARDING = "PARTITION";
+  Query OK, 0 rows affected
+
+  obclient> ALTER TABLEGROUP tblgroup1 SHARDING = "ADAPTIVE";
+  Query OK, 0 rows affected
+   ```
+
+* 创建名为 `tblgroup2` 的表组，其 `SHARDING` 属性为 `NONE`，向表组中添加非分区表 `tbl1` 和分区表 `tbl2`。
+
+  ```shell
+  obclient> CREATE TABLEGROUP tblgroup2 SHARDING = 'NONE'; 
+  Query OK, 0 rows affected
+
+  obclient> CREATE TABLE tbl1 (col int);
+  Query OK, 0 rows affected
+
+  obclient> CREATE TABLE tbl2 (col1 BIGINT PRIMARY KEY,col2 VARCHAR(50)) 
+      PARTITION BY LIST(col1)
+        (PARTITION p0 VALUES IN (1, 2, 3),
+         PARTITION p1 VALUES IN (5, 6),
+         PARTITION p2 VALUES IN (DEFAULT)
+        );
+  Query OK, 0 rows affected
+
+  obclient> ALTER TABLEGROUP tblgroup2 ADD tbl1,tbl2;
   Query OK, 0 rows affected
   ```
 
-* 从表组中删除二级分区。
+  由于表组 `tblgroup2` 中包含非分区表和分区表，所以 `SHARDING` 属性不能更改为 `PARTITION` 或 `ADAPTIVE`。
+  
+  ```shell
+  obclient> ALTER TABLEGROUP tblgroup2 SHARDING = "PARTITION";
+  ERROR 4179 (HY000): Operation not allowed now
 
-  ```sql
-  obclient> ALTER TABLEGROUP tg1 DROP SUBPARTITION sp2;
+  obclient> ALTER TABLEGROUP tblgroup2 SHARDING = "ADAPTIVE";
+  ERROR 4179 (HY000): Operation not allowed now
+  ```
+
+* 创建名为 `tblgroup3` 的表组，其 `SHARDING` 属性为 `NONE`，向表组中添加分区表 `tbl1` 和分区表 `tbl2`。
+  
+   ```shell
+  obclient> CREATE TABLEGROUP tblgroup3 SHARDING = 'NONE'; 
+  Query OK, 0 rows affected
+
+  obclient> CREATE TABLE tbl1(col1 INT,col2 varchar(50))
+      PARTITION BY LIST(col1) SUBPARTITION BY LIST COLUMNS(col2)
+       (PARTITION p0 VALUES in (01)
+         (SUBPARTITION mp0 VALUES in ('01'),
+          SUBPARTITION mp1 VALUES in ('02'),
+          SUBPARTITION mp2 VALUES in ('03')
+          ),
+        PARTITION p1 VALUES in (02)
+          (SUBPARTITION mp3 VALUES in ('01'),
+           SUBPARTITION mp4 VALUES in ('02'),
+           SUBPARTITION mp5 VALUES in ('03'))
+        );
+  Query OK, 0 rows affected
+
+  obclient> CREATE TABLE tbl2(col1 INT,col2 varchar(50))
+      PARTITION BY LIST(col1) SUBPARTITION BY LIST COLUMNS(col2)
+       (PARTITION p0 VALUES in (01)
+         (SUBPARTITION mp0 VALUES in ('01'),
+          SUBPARTITION mp1 VALUES in ('02')),
+        PARTITION p1 VALUES in (02)
+         (SUBPARTITION mp3 VALUES in ('01'),
+          SUBPARTITION mp4 VALUES in ('02'))
+        );
+  Query OK, 0 rows affected
+
+  obclient> ALTER TABLEGROUP tblgroup3 ADD tbl1,tbl2; 
   Query OK, 0 rows affected
   ```
 
-* 从表组中删除一级分区。
+  由于表组 `tblgroup3` 中 `tbl1` 和 `tbl2` 二级分区个数不同，所以 `SHARDING` 属性可以更改为`PARTITION`，但是不能更改为 `ADAPTIVE`。
 
-  ```sql
-  obclient> ALTER TABLEGROUP tg1 DROP PARTITION p2;
+  ```shell
+  obclient> ALTER TABLEGROUP tblgroup3 SHARDING = "PARTITION";
   Query OK, 0 rows affected
+
+  obclient> ALTER TABLEGROUP tblgroup3 SHARDING = "ADAPTIVE";
+  ERROR 4179 (HY000): Operation not allowed now
   ```
 
-有关创建分区的详细信息，请参见《OceanBase 数据库管理员指南》的 **管理分区** 章节。
+* 创建名为 `tblgroup4` 的表组，其 `SHARDING` 属性为 `ADAPTIVE`，修改表组中表 `tbl1` 和表 `tbl2` 的分区个数，则表组中所有表此时分区方式不一致，表组中不能加入新的表 `tbl3`。
+  
+  ```shell
+  obclient> CREATE TABLEGROUP tblgroup4 SHARDING = 'ADAPTIVE'; 
+  Query OK, 0 rows affected
+
+  obclient> CREATE TABLE tbl1(col1 int,col2 int) 
+      PARTITION BY RANGE(col1) SUBPARTITION BY RANGE(col2) 
+        SUBPARTITION TEMPLATE 
+         (SUBPARTITION mp0 VALUES LESS THAN(2020), 
+          SUBPARTITION mp1 VALUES LESS THAN(2021), 
+          SUBPARTITION mp2 VALUES LESS THAN(2022)) 
+         (PARTITION p0 VALUES LESS THAN(100), 
+          PARTITION p1 VALUES LESS THAN(200));
+  Query OK, 0 rows affected
+
+  obclient> CREATE TABLE tbl2(col1 int,col2 int) 
+      PARTITION BY RANGE(col1) SUBPARTITION BY RANGE(col2) 
+        SUBPARTITION TEMPLATE 
+         (SUBPARTITION mp0 VALUES LESS THAN(2020), 
+          SUBPARTITION mp1 VALUES LESS THAN(2021), 
+          SUBPARTITION mp2 VALUES LESS THAN(2022)) 
+        (PARTITION p0 VALUES LESS THAN(100), 
+         PARTITION p1 VALUES LESS THAN(200));
+  Query OK, 0 rows affected
+
+  obclient> ALTER TABLEGROUP tblgroup4 ADD tbl1,tbl2; 
+  Query OK, 0 rows affected
+
+  obclient> ALTER TABLE tbl1
+      ADD PARTITION (PARTITION p3 VALUES LESS THAN(400), 
+                     PARTITION p4 VALUES LESS THAN(500));
+  Query OK, 0 rows affected
+
+  obclient> ALTER TABLE tbl2 DROP SUBPARTITION p0smp0,p0smp1;
+  Query OK, 0 rows affected
+
+  obclient> CREATE TABLE tbl3(col1 int,col2 int) 
+      PARTITION BY RANGE(col1) SUBPARTITION BY RANGE(col2) 
+        SUBPARTITION TEMPLATE 
+         (SUBPARTITION mp0 VALUES LESS THAN(2020), 
+          SUBPARTITION mp1 VALUES LESS THAN(2021), 
+          SUBPARTITION mp2 VALUES LESS THAN(2022)) 
+         (PARTITION p0 VALUES LESS THAN(100), 
+          PARTITION p1 VALUES LESS THAN(200));
+  Query OK, 0 rows affected
+ 
+  obclient> ALTER TABLEGROUP tblgroup4 ADD tbl3;
+  ERROR 4179 (HY000): Operation not allowed now
+  ```
+
+## 相关文档 
+
+* [CREATE TABLEGROUP](27.create-tablegroup-of-mysql-mode.md)
+
+* [DROP TABLEGROUP](38.drop-tablegroup-of-mysql-mode.md)
+  
+* [管理表组内的表](../../../../2.administrator-guide/3.database-object-management/1.manage-object-of-mysql-mode/4.manage-table-groups-of-mysql-mode/6.manage-tables-within-a-table-group-of-mysql-mode.md)
+
+* [查看表组信息](../../../../2.administrator-guide/3.database-object-management/1.manage-object-of-mysql-mode/4.manage-table-groups-of-mysql-mode/3.view-the-information-of-a-table-group-of-mysql-mode.md)
