--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/17.alter-tablegroup-of-mysql-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/17.alter-tablegroup-of-mysql-mode.md
@@ -40,7 +40,7 @@
   obclient> CREATE TABLEGROUP tblgroup1 SHARDING = 'NONE'; 
   Query OK, 0 rows affected
 
-  obclient> CREATE TABLE tbl1(col1 INT,col2 varchar(50))
+  obclient> CREATE TABLE tbl1(col1 INT,col2 VARCHAR(50))
       PARTITION BY LIST(col1) SUBPARTITION BY LIST COLUMNS(col2)
         (PARTITION p0 VALUES in (01)
            (SUBPARTITION mp0 VALUES in ('01'),
@@ -51,7 +51,7 @@
          );
   Query OK, 0 rows affected
 
-  obclient> CREATE TABLE tbl2(col1 INT,col2 varchar(50))
+  obclient> CREATE TABLE tbl2(col1 INT,col2 VARCHAR(50))
       PARTITION BY LIST(col1) SUBPARTITION BY LIST COLUMNS(col2)
         (PARTITION p0 VALUES in (01)
           (SUBPARTITION mp0 VALUES in ('01'),
@@ -82,7 +82,7 @@
   obclient> CREATE TABLEGROUP tblgroup2 SHARDING = 'NONE'; 
   Query OK, 0 rows affected
 
-  obclient> CREATE TABLE tbl1 (col int);
+  obclient> CREATE TABLE tbl1 (col INT);
   Query OK, 0 rows affected
 
   obclient> CREATE TABLE tbl2 (col1 BIGINT PRIMARY KEY,col2 VARCHAR(50)) 
@@ -113,7 +113,7 @@
   obclient> CREATE TABLEGROUP tblgroup3 SHARDING = 'NONE'; 
   Query OK, 0 rows affected
 
-  obclient> CREATE TABLE tbl1(col1 INT,col2 varchar(50))
+  obclient> CREATE TABLE tbl1(col1 INT,col2 VARCHAR(50))
       PARTITION BY LIST(col1) SUBPARTITION BY LIST COLUMNS(col2)
        (PARTITION p0 VALUES in (01)
          (SUBPARTITION mp0 VALUES in ('01'),
@@ -127,7 +127,7 @@
         );
   Query OK, 0 rows affected
 
-  obclient> CREATE TABLE tbl2(col1 INT,col2 varchar(50))
+  obclient> CREATE TABLE tbl2(col1 INT,col2 VARCHAR(50))
       PARTITION BY LIST(col1) SUBPARTITION BY LIST COLUMNS(col2)
        (PARTITION p0 VALUES in (01)
          (SUBPARTITION mp0 VALUES in ('01'),
@@ -142,7 +142,7 @@
   Query OK, 0 rows affected
   ```
 
-  由于表组 `tblgroup3` 中 `tbl1` 和 `tbl2` 二级分区个数不同，所以 `SHARDING` 属性可以更改为`PARTITION`，但是不能更改为 `ADAPTIVE`。
+  由于表组 `tblgroup3` 中 `tbl1` 和 `tbl2` 的二级分区个数不同，所以 `SHARDING` 属性可以更改为`PARTITION`，但是不能更改为 `ADAPTIVE`。
 
   ```shell
   obclient> ALTER TABLEGROUP tblgroup3 SHARDING = "PARTITION";
@@ -158,7 +158,7 @@
   obclient> CREATE TABLEGROUP tblgroup4 SHARDING = 'ADAPTIVE'; 
   Query OK, 0 rows affected
 
-  obclient> CREATE TABLE tbl1(col1 int,col2 int) 
+  obclient> CREATE TABLE tbl1(col1 INT,col2 INT) 
       PARTITION BY RANGE(col1) SUBPARTITION BY RANGE(col2) 
         SUBPARTITION TEMPLATE 
          (SUBPARTITION mp0 VALUES LESS THAN(2020), 
@@ -168,7 +168,7 @@
           PARTITION p1 VALUES LESS THAN(200));
   Query OK, 0 rows affected
 
-  obclient> CREATE TABLE tbl2(col1 int,col2 int) 
+  obclient> CREATE TABLE tbl2(col1 INT,col2 INT) 
       PARTITION BY RANGE(col1) SUBPARTITION BY RANGE(col2) 
         SUBPARTITION TEMPLATE 
          (SUBPARTITION mp0 VALUES LESS THAN(2020), 
@@ -189,7 +189,7 @@
   obclient> ALTER TABLE tbl2 DROP SUBPARTITION p0smp0,p0smp1;
   Query OK, 0 rows affected
 
-  obclient> CREATE TABLE tbl3(col1 int,col2 int) 
+  obclient> CREATE TABLE tbl3(col1 INT,col2 INT) 
       PARTITION BY RANGE(col1) SUBPARTITION BY RANGE(col2) 
         SUBPARTITION TEMPLATE 
          (SUBPARTITION mp0 VALUES LESS THAN(2020), 
