--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/27.create-tablegroup-of-mysql-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/27.create-tablegroup-of-mysql-mode.md
@@ -34,10 +34,10 @@ tablegroup_option:
   obclient> CREATE TABLEGROUP myTableGroup1;
   Query OK, 0 rows affected
   
-  obclient> CREATE TABLE myt1 (c1 int, c2 int ) TABLEGROUP = myTableGroup1;
+  obclient> CREATE TABLE myt1 (c1 INT, c2 INT ) TABLEGROUP = myTableGroup1;
   Query OK, 0 rows affected
   
-  obclient> CREATE TABLE myt2 (c1 int, c2 int ) TABLEGROUP = myTableGroup1;
+  obclient> CREATE TABLE myt2 (c1 INT, c2 INT ) TABLEGROUP = myTableGroup1;
   Query OK, 0 rows affected
   ```
 
@@ -47,7 +47,7 @@ tablegroup_option:
   obclient> CREATE TABLEGROUP tblgroup1 SHARDING = 'NONE'; 
   Query OK, 0 rows affected
 
-  obclient> CREATE TABLE tbl1 (col int) TABLEGROUP = tblgroup1;
+  obclient> CREATE TABLE tbl1 (col INT) TABLEGROUP = tblgroup1;
   Query OK, 0 rows affected
 
   obclient> CREATE TABLE tbl2 (col1 BIGINT PRIMARY KEY,col2 VARCHAR(50)) TABLEGROUP = tblgroup1 
@@ -101,7 +101,7 @@ tablegroup_option:
   obclient> CREATE TABLEGROUP tblgroup3 SHARDING = 'PARTITION'; 
   Query OK, 0 rows affected
 
-  obclient> CREATE TABLE tbl1 (col int) TABLEGROUP = tblgroup3;
+  obclient> CREATE TABLE tbl1 (col INT) TABLEGROUP = tblgroup3;
   Query OK, 0 rows affected
 
   obclient> CREATE TABLE tbl2 (col1 BIGINT PRIMARY KEY,col2 VARCHAR(50)) TABLEGROUP = tblgroup3 
@@ -142,7 +142,7 @@ tablegroup_option:
   obclient> CREATE TABLEGROUP tblgroup5 SHARDING = 'ADAPTIVE'; 
   Query OK, 0 rows affected
 
-  obclient> CREATE TABLE tbl1(col1 INT,col2 varchar(50)) TABLEGROUP = tblgroup5
+  obclient> CREATE TABLE tbl1(col1 INT,col2 VARCHAR(50)) TABLEGROUP = tblgroup5
       PARTITION BY LIST(col1) SUBPARTITION BY LIST COLUMNS(col2)
         (PARTITION p0 VALUES in (01)
            (SUBPARTITION mp0 VALUES in ('01'),
@@ -155,7 +155,7 @@ tablegroup_option:
         );
   Query OK, 0 rows affected
 
-  obclient> CREATE TABLE tbl2(col1 INT,col2 varchar(50)) TABLEGROUP = tblgroup5
+  obclient> CREATE TABLE tbl2(col1 INT,col2 VARCHAR(50)) TABLEGROUP = tblgroup5
       PARTITION BY LIST(col1) SUBPARTITION BY LIST COLUMNS(col2)
         (PARTITION p0 VALUES in (01)
            (SUBPARTITION mp0 VALUES in ('01'),
@@ -178,7 +178,7 @@ tablegroup_option:
   obclient> CREATE TABLE tbl1 (col int) TABLEGROUP = tblgroup6;
   Query OK, 0 rows affected
 
-  obclient> CREATE TABLE tbl2(col1 INT,col2 varchar(50)) TABLEGROUP = tblgroup6
+  obclient> CREATE TABLE tbl2(col1 INT,col2 VARCHAR(50)) TABLEGROUP = tblgroup6
       PARTITION BY LIST(col1) SUBPARTITION BY LIST COLUMNS(col2)
         (PARTITION p0 VALUES in (01)
            (SUBPARTITION mp0 VALUES in ('01'),
@@ -199,7 +199,7 @@ tablegroup_option:
   obclient> CREATE TABLEGROUP tblgroup7 SHARDING = 'ADAPTIVE'; 
   Query OK, 0 rows affected
 
-  obclient> CREATE TABLE tbl1(col1 INT,col2 varchar(50)) TABLEGROUP = tblgroup7
+  obclient> CREATE TABLE tbl1(col1 INT,col2 VARCHAR(50)) TABLEGROUP = tblgroup7
       PARTITION BY LIST(col1) SUBPARTITION BY LIST COLUMNS(col2)
         (PARTITION p0 VALUES in (01)
           (SUBPARTITION mp0 VALUES in ('01'),
@@ -213,7 +213,7 @@ tablegroup_option:
         );
   Query OK, 0 rows affected
 
-  obclient> CREATE TABLE tbl2(col1 INT,col2 varchar(50)) TABLEGROUP = tblgroup7
+  obclient> CREATE TABLE tbl2(col1 INT,col2 VARCHAR(50)) TABLEGROUP = tblgroup7
       PARTITION BY LIST(col1) SUBPARTITION BY LIST COLUMNS(col2)
         (PARTITION p0 VALUES in (01)
            (SUBPARTITION mp0 VALUES in ('01'),
