--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/25.create-tablegroup-of-oracle-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/25.create-tablegroup-of-oracle-mode.md
@@ -4,193 +4,222 @@
 
 该语句用来创建表组。
 
-OceanBase 数据库当前版本在创建非绑定的 Table Group 时支持使用非模版二级分区，即允许将若干个非模版二级分区添加到 Table Group 当中。
+表组主要用于创建一组具有相同分布特征的表，具有相同分布特征的表在进行连接操作时，可以在本地进行，避免跨节点的数据请求。
 
-  <main id="notice" type='explain'>
-    <h4>说明</h4>
-    <p>只有租户下的管理员权限才可以创建表组。</p>
-  </main>
+创建表组时，首先要规划好表组的用途。如果是用于普通表的属性，表组就不用分区；如果是用于分区表的属性，表组就要指定分区策略，并且要跟分区表的分区策略保持一致。
+
 
 ## 语法
 
 ```sql
-CREATE TABLEGROUP tablegroup_name [opt_tg_partition_option]
+CREATE TABLEGROUP tablegroup_name [tablegroup_option];
 
-
-opt_tg_partition_option:
-     PARTITION BY 
-        HASH column_num [tg_subpartition_option] PARTITIONS int_num
-    | RANGE [COLUMNS] column_num [tg_subpartition_option] {PARTITION partition_name VALUES LESS THAN range_partition_expr, ...}
-    | LIST [COLUMNS] column_num [tg_subpartition_option] {PARTITION partition_name VALUES  list_partition_expr, ...}
-
-tg_subpartition_option:
-     SUBPARTITION BY 
-        RANGE [COLUMNS] column_num SUBPARTITION TEMPLATE {SUBPARTITION partition_name VALUES LESS THAN range_partition_expr, ...}
-    | HASH column_num [SUBPARTITIONS INTNUM]
-    | LIST [COLUMNS] column_num SUBPARTITION TEMPLATE {SUBPARTITION partition_name VALUES  list_partition_expr, ...}
+tablegroup_option:
+   SHARDING = 'NONE' | 'PARTITION' | 'ADAPTIVE'
 ```
 
-创建表组的非模版二级分区的语法如下：
-
-```sql
-CREATE TABLEGROUP  <tablegroup_name> [opt_tg_partition_option] 
-
-opt_tg_partition_option:
-     PARTITION BY 
-    | HASH column_num [tg_subpartition_option] PARTITIONS int_num
-    | RANGE [COLUMNS] column_num [tg_subpartition_option] {PARTITION partition_name VALUES LESS THAN range_partition_expr, ...}
-    | LIST [COLUMNS] column_num [tg_subpartition_option] {PARTITION partition_name VALUES list_partition_expr, ...}
-
-tg_subpartition_option:
-      SUBPARTITION BY 
-    | RANGE [COLUMNS] column_num SUBPARTITION {SUBPARTITION partition_name VALUES LESS THAN range_partition_expr, ...}
-    | LIST [COLUMNS] column_num SUBPARTITION  {SUBPARTITION partition_name VALUES  list_partition_expr, ...}
-    | HASH [SUBPARTITIONS int_num]
-```
 
 ## 参数解释
 
-|             参数             |         描述           |
-|----------------------------|------------------------|
-| tablegroup_name            | 表组名称，最长 64 个字符，字符只能有大小写英文字母，数字和下划线，而且必须以字母或下划线开头，并且不能使用数据库的关键字。  |
-| opt_tg_partition_option    | 表组的分区规则定义，与 `CREATE TABLE` 使用同样的分区方式。 表组没有具体的列定义，所以 `HASH`、`RANGE` 和`LIST` 不需要写出具体的列，只需要指定列个数（`COLUMN_NUM`）。 相同的分区方式： <ul><li> 分区类型相同（例如，都是 Hash+Range 分区）。   </li><li> 如果是 Hash 分区，要求引用的列数相同，并且分区个数相同。   </li><li> 如果是 Range 分区，要求引用的列数相同，并且分区数相同，Range 分割点相同。 对于二级分区，根据其分区类型，要求和上述一致。</li></ul>  |
+|           **参数**           |    **描述**    |
+|----------------------------|---------------------------------|
+| tablegroup_name            | 表组名称，最长 64 个字符，字符只能有大小写英文字母，数字和下划线，而且必须以字母或下划线开头，并且不能使用 OceanBase 数据库的关键字。  |
+| SHARDING   | 表组的属性。如果不指定 `SHARDING` 属性，则默认创建 `ADAPTIVE` 的表组。`SHARDING` 取值如下：<ul><li>`NONE`：对加入表组的表没有限制。</li><li>`PARTITION`：加入表组的表对应的一级分区，需要与表组中所有表的一级分区的分区方式一致，包括分区类型、分区个数和分区 Value。</li><li>`ADAPTIVE`：加入表组的表对应的一级分区和二级分区，需要与表组中所有表的一级分区和二级分区的分区方式一致，包括分区类型、分区个数和分区 Value。</li></ul>相同的分区方式包括：<ul><li>分区类型相同（例如都是 Hash+Range 分区）。</li><li>如果是 Hash 分区，要求引用的列数相同，并且分区个数相同。</li><li>如果是 Range 分区，要求引用的列数相同，并且分区数相同，Range 分割点相同。</li></ul>对于二级分区，根据其分区类型，要求和上述一致。    |
 
 ## 示例
 
-* 创建名为 `tblgroup1` 的表组，同时创建表的 `TABLEGROUP` 属性是 `tblgroup1` 的表 `tbl1` 和 `tbl2`。
+* 创建名为 `myTableGroup1` 的表组，并将非分区表 `myt1` 和 `myt2` 加入到表组中。
 
-  ```sql
-  obclient> CREATE TABLEGROUP tblgroup1;
+  ```shell
+  obclient> CREATE TABLEGROUP myTableGroup1;
   Query OK, 0 rows affected
   
-  obclient> CREATE TABLE tbl1 (col1 int, col2 int ) tablegroup = tblgroup1;
+  obclient> CREATE TABLE myt1 (c1 NUMBER, c2 NUMBER) TABLEGROUP = myTableGroup1;
   Query OK, 0 rows affected
   
-  obclient> CREATE TABLE tbl2 (col1 int, col2 int ) tablegroup = tblgroup1;
+  obclient> CREATE TABLE myt2 (c1 NUMBER, c2 NUMBER) TABLEGROUP = myTableGroup1;
   Query OK, 0 rows affected
   ```
 
-* 创建 Hash 分区的表组 `tblgroup2`，同时创建 Hash 分区的表 `tbl1` 和 `tbl2`，且分区个数相同。
+* 创建名为 `tblgroup1` 的表组，其 `SHARDING` 属性为 `NONE`，并将非分区表 `tbl1` 、一级分区表 `tbl2`、二级分区表 `tbl3` 加入到表组中。
 
-  ```sql
-  obclient> CREATE TABLEGROUP tblgroup2  partition by hash partitions 10;
+  ```shell
+  obclient> CREATE TABLEGROUP tblgroup1 SHARDING = 'NONE'; 
   Query OK, 0 rows affected
+
+  obclient> CREATE TABLE tbl1 (col NUMBER) TABLEGROUP = tblgroup1;
+  Query OK, 0 rows affected
+
+  obclient> CREATE TABLE tbl2 (col1 NUMBER,col2 VARCHAR2(50)) TABLEGROUP = tblgroup1 
+      PARTITION BY LIST(col1)
+        (PARTITION p0 VALUES ('01'),
+         PARTITION p1 VALUES ('02')
+         );
+  Query OK, 0 rows affected
+
+  obclient> CREATE TABLE tbl3(col1 NUMBER,col2 VARCHAR2(50)) TABLEGROUP = tblgroup1 
+      PARTITION BY LIST(col1) SUBPARTITION BY LIST (col2)
+        SUBPARTITION TEMPLATE
+        (SUBPARTITION mp0 VALUES ('01'),
+         SUBPARTITION mp1 VALUES ('02'),
+         SUBPARTITION mp2 VALUES ('03')
+         )
+        (PARTITION p0 VALUES('01'),
+         PARTITION p1 VALUES('02')
+        );
+  Query OK, 0 rows affected
+  ```
+
+* 创建名为 `tblgroup2` 的表组，其 `SHARDING` 属性为 `PARTITION`，并将分区表 `tbl1` 和分区表 `tbl2` 加入到表组中，两者的分区方式一致。
+
+  ```shell
+  obclient> CREATE TABLEGROUP tblgroup2 SHARDING = 'PARTITION'; 
+  Query OK, 0 rows affected
+
+  obclient> CREATE TABLE tbl1 (col1 NUMBER,col2 VARCHAR2(50)) TABLEGROUP = tblgroup2 
+      PARTITION BY LIST(col1)
+        (PARTITION p0 VALUES ('01'),
+         PARTITION p1 VALUES ('02')
+        );
+  Query OK, 0 rows affected
+
+  obclient> CREATE TABLE tbl2 (col1 NUMBER,col2 VARCHAR2(50)) TABLEGROUP = tblgroup2 
+    PARTITION BY LIST(col1)
+      (PARTITION p0 VALUES ('01'),
+       PARTITION p1 VALUES ('02')
+       );
+  Query OK, 0 rows affected
+  ```
+
+* 创建名为 `tblgroup3` 的表组，其 `SHARDING` 属性为 `PARTITION`，非分区表 `tbl1` 和分区表 `tbl2` 不能同时加入到该表组中。
+
+  ```shell
+  obclient> CREATE TABLEGROUP tblgroup3 SHARDING = 'PARTITION'; 
+  Query OK, 0 rows affected
+
+  obclient> CREATE TABLE tbl1 (col INT) TABLEGROUP = tblgroup3;
+  Query OK, 0 rows affected
+
+  obclient> CREATE TABLE tbl2 (col1 NUMBER,col2 VARCHAR2(50)) TABLEGROUP = tblgroup3
+    PARTITION BY LIST(col1)
+      (PARTITION p0 VALUES ('01'),
+       PARTITION p1 VALUES ('02')
+       );
+  ORA-00600: internal error code, arguments: -4179, Operation not allowed now
+  ```
+
+* 创建名为 `tblgroup4` 的表组，其 `SHARDING` 属性为 `PARTITION`，分区表 `tbl1` 和分区表 `tbl2` 的分区值不一致，不能同时加入到表组中。
+
+  ```shell
+  obclient> CREATE TABLEGROUP tblgroup4 SHARDING = 'PARTITION'; 
+  Query OK, 0 rows affected
+
+  obclient> CREATE TABLE tbl1 (col1 NUMBER,col2 VARCHAR2(50)) TABLEGROUP = tblgroup4
+      PARTITION BY LIST(col1)
+        (PARTITION p0 VALUES ('01'),
+         PARTITION p1 VALUES ('02')
+        );
+  Query OK, 0 rows affected
+
+  obclient> CREATE TABLE tbl2 (col1 NUMBER,col2 VARCHAR2(50)) TABLEGROUP = tblgroup4 
+      PARTITION BY LIST(col1)
+        (PARTITION p0 VALUES ('01'),
+         PARTITION p1 VALUES ('02'),
+         PARTITION p2 VALUES ('03')
+         );
+   ORA-00600:internal error code, arguments: -5280, Duplicate partition name
+  ```
+
+* 创建名为 `tblgroup5` 的表组，其 `SHARDING` 属性为 `ADAPTIVE`，并将分区表 `tbl1` 和分区表 `tbl2` 加入到表组中，两者的分区方式一致。
+ 
+  ```shell
+  obclient> CREATE TABLEGROUP tblgroup5 SHARDING = 'ADAPTIVE'; 
+  Query OK, 0 rows affected
+
+  obclient> CREATE TABLE tbl1(col1 NUMBER,col2 VARCHAR2(50)) TABLEGROUP = tblgroup5
+      PARTITION BY LIST(col1) SUBPARTITION BY LIST (col2)
+        SUBPARTITION TEMPLATE
+        (SUBPARTITION mp0 VALUES ('01'),
+         SUBPARTITION mp1 VALUES ('02'),
+         SUBPARTITION mp2 VALUES ('03')
+         )
+        (PARTITION p0 VALUES('01'),
+         PARTITION p1 VALUES('02')
+        );
+  Query OK, 0 rows affected
+
+  obclient> CREATE TABLE tbl2(col1 NUMBER,col2 VARCHAR2(50)) TABLEGROUP = tblgroup5
+      PARTITION BY LIST(col1) SUBPARTITION BY LIST(col2)
+        SUBPARTITION TEMPLATE
+        (SUBPARTITION mp0 VALUES('01'),
+         SUBPARTITION mp1 VALUES('02'),
+         SUBPARTITION mp2 VALUES('03')
+        )
+        (PARTITION p0 VALUES('01'),
+         PARTITION p1 VALUES('02')
+        );
+  Query OK, 0 rows affected
+  ```
+
+* 创建名为 `tblgroup6` 的表组，其 `SHARDING` 属性为 `ADAPTIVE`，非分区表 `tbl1` 和分区表 `tbl2` 不能同时加入到表组中。
+
+  ```shell
+  obclient> CREATE TABLEGROUP tblgroup6 SHARDING = 'ADAPTIVE'; 
+  Query OK, 0 rows affected
+
+  obclient> CREATE TABLE tbl1 (col INT) TABLEGROUP = tblgroup6;
+  Query OK, 0 rows affected
+
+  obclient> CREATE TABLE tbl2(col1 NUMBER,col2 VARCHAR2(50)) TABLEGROUP = tblgroup6
+      PARTITION BY LIST(col1) SUBPARTITION BY LIST(col2)
+        SUBPARTITION TEMPLATE
+        (SUBPARTITION mp0 VALUES('01'),
+         SUBPARTITION mp1 VALUES('02'),
+         SUBPARTITION mp2 VALUES('03')
+        )
+        (PARTITION p0 VALUES('01'),
+         PARTITION p1 VALUES('02')
+        );
+  ORA-00600: internal error code, arguments: -4179, Operation not allowed now
+  ```
+
+* 创建名为 `tblgroup7` 的表组，其 `SHARDING` 属性为 `ADAPTIVE`，由于分区表 `tbl1` 和分区表 `tbl2` 的分区个数不同，不能同时加入到表组中。
+
+  ```shell
+  obclient> CREATE TABLEGROUP tblgroup7 SHARDING = 'ADAPTIVE'; 
+  Query OK, 0 rows affected
+
+  obclient> CREATE TABLE tbl1(col1 NUMBER,col2 VARCHAR2(50)) TABLEGROUP = tblgroup7
+      PARTITION BY LIST(col1) SUBPARTITION BY LIST(col2)
+        SUBPARTITION TEMPLATE
+        (SUBPARTITION mp0 VALUES ('01'),
+         SUBPARTITION mp1 VALUES ('02'),
+         SUBPARTITION mp2 VALUES ('03')
+         )
+        (PARTITION p0 VALUES('01'),
+         PARTITION p1 VALUES('02')
+        );
+  Query OK, 0 rows affected
+
+  obclient> CREATE TABLE tbl2(col1 NUMBER,col2 VARCHAR2(50)) TABLEGROUP = tblgroup7
+      PARTITION BY LIST(col1) SUBPARTITION BY LIST(col2)
+        SUBPARTITION TEMPLATE
+        (SUBPARTITION mp0 VALUES('01'),
+         SUBPARTITION mp1 VALUES('02')
+        )
+        (PARTITION p0 VALUES('01'),
+         PARTITION p1 VALUES('02')
+        );
+  ORA-00600: internal error code, arguments: -4179, Operation not allowed now
+  ```
+
+## 相关文档 
+
+* [ALTER TABLEGROUP](11.alter-tablegroup-of-oracle-mode.md)
+
+* [DROP TABLEGROUP](40.drop-tablegroup-of-oracle-mode.md)
   
-  obclient> CREATE TABLE tbl1(col1 int, col2 int) TABLEGROUP = tblgroup2 partition by hash(col1) partitions 10;
-  Query OK, 0 rows affected
-  
-  obclient> CREATE TABLE tbl2(col1 int, col2 int) TABLEGROUP = tblgroup2  partition by hash(col2) partitions 10;
-  Query OK, 0 rows affected
-  ```
+* [管理表组内的表](../../../../2.administrator-guide/3.database-object-management/1.manage-object-of-mysql-mode/3.manage-table-groups-of-mysql-mode/6.manage-tables-within-a-table-group-of-oracle-mode.md)
 
-### 创建模板二级分区表组
+* [查看表组信息](../../../../2.administrator-guide/3.database-object-management/1.manage-object-of-mysql-mode/3.manage-table-groups-of-mysql-mode/3.view-the-information-of-a-table-group-of-oracle-mode.md)
 
-* 创建 RANGE COLUMNS + RANGE COLUMNS 模式二级分区表组 `tblgroup3`。
-
-  ```sql
-  obclient> CREATE TABLEGROUP tblgroup3 PARTITION BY RANGE COLUMNS 1
-  SUBPARTITION BY RANGE  COLUMNS 1
-  SUBPARTITION TEMPLATE
-  (
-   SUBPARTITION rp1 VALUES LESS THAN (2019),
-   SUBPARTITION rp2 VALUES LESS THAN (2020),
-   SUBPARTITION rp3 VALUES LESS THAN (2021)
-  )
-  (
-   PARTITION p0 VALUES LESS THAN (100),
-   PARTITION p1 VALUES LESS THAN (200),
-   PARTITION p2 VALUES LESS THAN (300)
-  )
-  ;
-  Query OK, 0 rows affected
-  ```
-
-* 创建 RANGE COLUMNS + LIST COLUMNS 二级分区表组 `tblgroup4`。
-
-  ```sql
-  obclient> CREATE TABLEGROUP tblgroup4 PARTITION BY RANGE COLUMNS 1
-  SUBPARTITION BY LIST COLUMNS 1
-  SUBPARTITION TEMPLATE
-  (
-   SUBPARTITION rp0 VALUES  ('00','01'),
-   SUBPARTITION rp1 VALUES  ('02','03'),
-   SUBPARTITION rp2 VALUES  ('04','05')
-  )
-  (
-   PARTITION p0 VALUES LESS THAN (2019),
-   PARTITION p1 VALUES LESS THAN (2020),
-   PARTITION p2 VALUES LESS THAN (2021)
-  );
-  Query OK, 0 rows affected
-  ```
-
-### 创建非模板二级分区表组
-
-* 创建 RANGE COLUMNS + RANGE COLUMNS 二级分区的表组 `tblgroup6`。
-
-  ```sql
-  obclient> CREATE TABLEGROUP tblgroup6 PARTITION BY RANGE COLUMNS 1
-    SUBPARTITION BY RANGE COLUMNS 1
-  (
-  PARTITION p0 VALUES LESS THAN (100)
-     (
-     SUBPARTITION sp0 VALUES LESS THAN (2018), 
-     SUBPARTITION sp1 VALUES LESS THAN (2019),
-     SUBPARTITION sp2 VALUES LESS THAN (2020),
-     SUBPARTITION sp3 VALUES LESS THAN (2021)
-     ),
-  PARTITION p1 VALUES LESS THAN (200)
-    ( 
-    SUBPARTITION sp4 VALUES LESS THAN (2018),
-    SUBPARTITION sp5 VALUES LESS THAN (2019),
-    SUBPARTITION sp6 VALUES LESS THAN (2020),
-    SUBPARTITION sp7 VALUES LESS THAN (2021)
-    )
-  );
-  Query OK, 0 rows affected
-  ```
-
-* 创建 RANGE COLUMNS + LIST COLUMNS 二级分区的表组 `tblgroup7`。
-
-  ```sql
-  obclient> CREATE TABLEGROUP tb1 PARTITION BY RANGE COLUMNS 1
-   SUBPARTITION BY LIST COLUMNS 1
-  (
-  PARTITION p0 VALUES LESS THAN (2019)
-    (SUBPARTITION p0sp0 VALUES ('00', '03'),
-     SUBPARTITION p0sp1 VALUES ('04', '06'),
-     SUBPARTITION p0sp2 VALUES ('07', '09')
-    ),
-  PARTITION p1 VALUES LESS THAN ( 2020)
-    (SUBPARTITION p1sp0 VALUES ('00', '03'),
-     SUBPARTITION p1sp1 VALUES ('04', '06'),
-     SUBPARTITION p1sp2 VALUES ('07', '09')
-    ),
-  PARTITION p2 VALUES LESS THAN (2021)
-    (SUBPARTITION p2sp0 VALUES ('00', '03'),
-     SUBPARTITION p2sp1 VALUES ('04', '06'),
-     SUBPARTITION p2sp2 VALUES ('07', '09'))
-   );
-  Query OK, 0 rows affected
-  ```
-
-* 创建 RANGE COLUMNS + Hash 二级分区的表组 `tblgroup8`。
-
-  ```sql
-  obclient> CREATE TABLEGROUP tblgroup8  PARTITION BY RANGE COLUMNS 1
-  SUBPARTITION BY HASH SUBPARTITIONS 1
-  (
-  PARTITION p0 VALUES LESS THAN (2020)
-    (
-     SUBPARTITION p0sp1, 
-     SUBPARTITION p0sp2
-     ),
-  PARTITION p1 VALUES LESS THAN (2021) 
-     (
-      SUBPARTITION p1sp1, 
-      SUBPARTITION p1sp2, 
-      SUBPARTITION p1sp3
-      )
-  ); 
-  Query OK, 0 rows affected
-  ```
