--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/16.create-index-of-oracle-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/16.create-index-of-oracle-mode.md
@@ -45,7 +45,7 @@ column_name_list:
 | table_name      | 指过索引所属的表名。   |
 | key_part        | 创建（函数）索引。 |
 | index_col_name  | 指定索引的列名，每个列名后都支持 ASC（升序），不支持 DESC（降序）。默认为升序。 建立索引的排序方式为：首先以 `index_col_name` 中第一个列的值排序；该列值相同的记录，按下一列名的值排序；以此类推。 |
-| expr            | 表示合法的函数索引表达式，且允许是布尔表达式，例如 `c1=c1`。<br>**注意** OceanBase 数据库当前版本禁止创建生成列上的函数索引。函数索引所支持的表达式参见 [函数索引支持的系统函数列表](链接待补充) 。         |
+| expr            | 表示合法的函数索引表达式，但是不允许是布尔表达式，例如 `c1=c1`。<br>**注意** OceanBase 数据库当前版本禁止创建生成列上的函数索引。函数索引所支持的表达式参见 [函数索引支持的系统函数列表](链接待补充) 。         |
 | column_name     | 用于创建索引的列名。  |
 | index_type      | 索引类型，只支持 `USING BTREE`，以 B-Tree 为索引。      |
 | UNIQUE          | 指定为唯一索引。    |
@@ -333,12 +333,12 @@ column_name_list:
   2 rows in set 
   ```
   
-* 在 `t1_func` 表上创建了一个索引定义是 `c1+c2 < 1` 的函数索引 `i1`。
+* 在 `t1_func` 表上创建了一个索引定义是 `c1+1` 的函数索引 `i1`。
   
   ```shell
   obclient> CREATE TABLE t1_func(c1 INT, c2 INT);
   Query OK, 0 rows affected 
 
-  obclient> CREATE INDEX i1 ON t1_func((c1+c2 < 1));
+  obclient> CREATE INDEX i1 ON t1_func(c1+1);
   Query OK, 0 rows affected
   ```
