--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/16.create-index-of-oracle-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/16.create-index-of-oracle-mode.md
@@ -341,4 +341,12 @@ column_name_list:
 
   obclient> CREATE INDEX i1 ON t1_func(c1+1);
   Query OK, 0 rows affected
+
+  obclient> SELECT index_name,index_type,table_owner,table_name,uniqueness FROM USER_INDEXES WHERE table_name='T1_FUNC';
+  +------------+-----------------------+-------------+------------+------------+
+  | INDEX_NAME | INDEX_TYPE            | TABLE_OWNER | TABLE_NAME | UNIQUENESS |
+  +------------+-----------------------+-------------+------------+------------+
+  | I1         | FUNCTION-BASED NORMAL | SYS         | T1_FUNC    | NONUNIQUE  |
+  +------------+-----------------------+-------------+------------+------------+
+  2 rows in set
   ```
