V420newfeature-DBMS_SQL.LAST_ERROR_POSITION

--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/152.dbms-sql-oracle/1.dbms-sql-overview-oracle.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/152.dbms-sql-oracle/1.dbms-sql-overview-oracle.md
@@ -94,7 +94,8 @@ DBMS_SQL 子程序概览
 | [EXECUTE_AND_FETCH](9.execute-and-fetch-oracle.md) | 执行指定的游标并获取行。                    |
 | [FETCH_ROWS](10.fetch-rows-oracle.md)        | 从指定游标中获取某行数据。                   |
 | [IS_OPEN](11.is-open-oracle.md)           | 如果指定的游标状态为 `OPEN` 时，则返回 `TRUE`。 |
-| [OPEN_CURSOR](12.open-cursor-oracle.md)       | 返回新游标的 ID。                      |
-| [PARSE](13.parse-oracle.md)             | 解析指定的语句。                        |
+| [LAST_ERROR_POSITION](12.last-error-position-of-oracle-mode.md)| 获取最近一次调用 `DBMS_SQL.PARSE` 时出现语法错误的位置。|
+| [OPEN_CURSOR](15.open-cursor-oracle.md)       | 返回新游标的 ID。                      |
+| [PARSE](20.parse-oracle.md)             | 解析指定的语句。                        |
 
 
