--- a/zh-CN/6.manage/5.security-and-permissions/3.access-control/4.1rpc-connection-authentication.md
+++ b/zh-CN/6.manage/5.security-and-permissions/3.access-control/4.1rpc-connection-authentication.md
@@ -2,13 +2,13 @@
 
 ## 功能简介
 
-开启 RPC 连接认证可以提升 RPC 通信的安全性。通过认证的客户端才能与 OBServer 节点建立 RPC 连接，可以有效拦截攻击者的恶意 RPC 报文，防止恶意 RPC 被 OBServer 节点执行。
+开启 RPC 连接认证可以提升 RPC 通信的安全性。只有通过认证的客户端才能与 OBServer 节点建立 RPC 连接，可以有效拦截攻击者的恶意 RPC 报文，防止恶意 RPC 被 OBServer 节点执行。
 
 在升级兼容性方面，本方案支持灰度升级流程，可以分段平滑升级，不影响业务进程。在升级过程中，高版本与低版本的 OBServer 节点是相互兼容的。即高版本作为客户端能够连接低版本服务端，同时低版本作为客户端也能够连接高版本服务端。升级后，默认情况下不开启 RPC 认证，需要手动开启。
 
 ## 限制条件
 
-OceanBase 数据库 V4.2.0 版本的 RPC 认证的功能，只有在启用 pkt-nio 网络框架后才能使用，即在开启 RPC 认证之前需要保证 `_enable_pkt_nio` 配置项设置为 True。
+OceanBase 数据库 V4.2.0 版本的 RPC 认证的功能，只有在启用 pkt-nio 网络框架后才能使用，即在开启 RPC 连接认证之前需要保证 `_enable_pkt_nio` 配置项设置为 True。
 
 <main id="notice" type='explain'>
   <h4>说明</h4>
@@ -35,11 +35,11 @@ OceanBase 数据库 V4.2.0 版本的 RPC 认证的功能，只有在启用 pkt-n
   </ul>
 </main>
 
-#### 执行连接命令
+#### 执行开启命令
 
 以 sys 租户身份登录 OceanBase 数据库，依次执行如下命令。
 
-1. 开启 RPC 认证相关的 SSL 配置。有关开启 SSL 连接的更多信息，请参见 [ssl_client_authentication](../../../7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/194.ssl_client_authentication.md)。
+1. 开启 SSL 连接。有关开启 SSL 连接的更多信息，请参见 [ssl_client_authentication](../../../7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/194.ssl_client_authentication.md)。
 
    ```sql
    ALTER SYSTEM SET ssl_client_authentication=True;
