--- a/zh-CN/6.manage/5.security-and-permissions/3.access-control/4.1rpc-connection-authentication.md
+++ b/zh-CN/6.manage/5.security-and-permissions/3.access-control/4.1rpc-connection-authentication.md
@@ -59,7 +59,7 @@ OceanBase 数据库 V4.2.0 版本的 RPC 认证的功能，只有在启用 pkt-n
 
    <main id="notice" type='notice'>
     <h4>注意</h4>
-    <p>虽然将服务端认证方式设置为 <code>ALL</code>（即 <code>ALTER SYSTEM SET rpc_server_authentication_method = 'ALL';</code> ）可以开启认证，但这也意味着服务端允许客户端不进行认证直接连接，存在较大的安全风险。因此，在生产环境下不建议采用这种方式。</p>
+    <p>虽然将服务端认证方式设置为 <code>ALL</code>（即 <code>ALTER SYSTEM SET rpc_server_authentication_method = 'ALL';</code> ）也可以开启认证，但这也意味着服务端允许客户端不进行认证直接连接，存在较大的安全风险。因此，在生产环境下不建议采用这种方式。</p>
     </main>
 
 ### 关闭认证
