410：TRUNCATE TABLE Add Description

--- a/zh-CN/3.develop/2.application-development-of-oracle-mode/3.write-data-of-oracle-mode/3.delete-data-of-oracle-mode.md
+++ b/zh-CN/3.develop/2.application-development-of-oracle-mode/3.write-data-of-oracle-mode/3.delete-data-of-oracle-mode.md
@@ -91,6 +91,11 @@ obclient [SYS]> DELETE FROM t_insert WHERE value < 40000;
 
 `TRUNCATE TABLE` 语句用于完全清空指定表，但是保留表结构，包括表中定义的分区信息。从逻辑上来讲，该语句等价于删除所有行的 `DELETE FROM` 语句。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>从 OceanBase V4.1 开始：<ul><li>没有自增列表的 <code>TRUNCATE TABLE</code> 语句，默认使用新的并行执行路径。</li><li>有自增列表的 <code>TRUNCATE TABLE</code> 语句，该语句仍然会采用串行执行的路径。</li></ul>另外并行度由并行线程的个数决定，而并行线程的个数受 Root Service 所在机器的 CPU 核数影响。</p>
+</main>
+
 `TRUNCATE TABLE` 语句的语法格式如下：
 
 ```sql
