--- a/zh-CN/5.data-migration/11.bypass-import/2.use-load-data-statement-to-bypass-import-data.md
+++ b/zh-CN/5.data-migration/11.bypass-import/2.use-load-data-statement-to-bypass-import-data.md
@@ -84,7 +84,7 @@ LOAD DATA /*+ direct(need_sort,max_error) parallel(N) */ INFILE 'file_name' ...
         Query OK, 0 rows affected
         ```
 
-3. 使用 `LOAD /*+ APPEND */ DATA` 语句导入数据。
+3. 使用 `LOAD /*+ direct */ DATA` 语句导入数据。
 
     ```shell
     obclient [test]> CREATE TABLE tbl1(col1 INT PRIMARY KEY,col2 INT);
