--- a/zh-CN/9.release-notes/101.enterprise-edition-history-release/101.V3.2/96.ob-323.md
+++ b/zh-CN/9.release-notes/101.enterprise-edition-history-release/101.V3.2/96.ob-323.md
@@ -29,7 +29,7 @@
 ### 缺陷修复
 
 * 修复在 WHERE 条件中含有 4 个及以上索引列，且满足第一个列为等值谓词，第二个列为范围谓词，第三个列为 in 表达式，第四个列为任意谓词的场景下，Query Range 抽取异常，导致查询结果错误的问题。【[点击查看详细信息](https://www.oceanbase.com/knowledge-base/oceanbase-database-20000043615?back=kb)】
-* 修复 obproxy 查询二级分区时，OBServer 节点处理默认参数异常过程中返回空路由信息，导致 obproxy 随机路由，增加查询耗时的问题。
+* 修复 obproxy 查询二级分区时，OBServer 节点处理默认参数异常过程中返回空路由信息，导致 obproxy 随机路由，增加查询耗时的问题。【[点击查看详细信息](https://www.oceanbase.com/knowledge-base/oceanbase-database-20000043626?back=kb)】
 * 修复 XA 场景下，嵌套 SQL 报错回滚导致 Scheduler Context 泄漏，积累超过上限引发对应节点事务服务能力缺失的问题。【[点击查看详细信息](https://www.oceanbase.com/knowledge-base/oceanbase-database-20000043617?back=kb)】
 * 修复 Nest Loop Join 查询场景下，存在 `TEMP TABLE TRANSFORMATION` 算子或生成非基表条件下压路径时，执行计划出错的问题。
 * 修复多表关联场景下，Nest Loop Join 右表使用全局索引，并且分布式连接算法使用 BC2HOST（Broadcast to Host Distribution）时，报错 `unexpected operator type` 的问题。【[点击查看详细信息](https://www.oceanbase.com/knowledge-base/oceanbase-database-20000043624?back=kb)】
@@ -50,7 +50,7 @@
 * 修复使用 OCI 连接数据库且设置了 `OCI_ATTR_FETCH_ROWID` 属性的情况下，数据表中定义了包含 `select ... for update` 语句的 TRIGGER，DML 语句和 `select ... for update` 发送到不同机器执行，且 DML 命中了 `PLAN CACHE` 的场景下，执行报错的问题。
 * 修复在查询语句中包含两个及以上 IN 表达式、至少一个向量表达式，且两个 IN 表达式均有索引的情况下，Query Range 抽取异常，导致查询报错的问题。【[点击查看详细信息](https://www.oceanbase.com/knowledge-base/oceanbase-database-20000043623?back=kb)】
 * 修复在 SQL 主键列或索引列的查询条件中含有 `last_insert_id()` 表达式的情况下，由于没有预计算 `last_insert_id()` 表达式，导致未使用索引，查询走全表扫描的问题。【[点击查看详细信息](https://www.oceanbase.com/knowledge-base/oceanbase-database-20000043625?back=kb)】
-* 修复 分区表行数据存在溢出存储的大对象时，查询报错问题。
+* 修复 分区表行数据存在溢出存储的大对象时，查询报错问题。【[点击查看详细信息](https://www.oceanbase.com/knowledge-base/oceanbase-database-20000043620?back=kb)】
 * 修复 DBLINK 场景下，嵌套 JOIN 的反拼机制不完善导致反拼出错的问题。【[点击查看详细信息](https://www.oceanbase.com/knowledge-base/oceanbase-database-20000043627?back=kb)】
 
 ### 注意事项
