--- a/zh-CN/1.learn-more-about-oceanbase/4.compatibility-with-oracle/1.overview-of-compatibility-with-oracle.md
+++ b/zh-CN/1.learn-more-about-oceanbase/4.compatibility-with-oracle/1.overview-of-compatibility-with-oracle.md
@@ -161,9 +161,33 @@ OceanBase 数据库兼容了部分 Oracle 数据库的系统视图，其中：
 
 ## 字符集和字符序
 
-* OceanBase 数据库支持的字符集有 binary、utf8mb4、gbk、utf16、gb18030 和 latin1。
+* OceanBase 数据库支持的字符集有 binary、utf8mb4、gbk、utf16、gb18030、latin1 和 gb18030_2022。
 
-* OceanBase 数据库支持的排序方式有 binary、utf8mb4_general_ci、utf8mb4_bin、gbk_chinese_ci、gbk_bin、utf16_general_ci、utf16_bin、utf8mb4_unicode_ci、utf16_unicode_ci、gb18030_chinese_ci、gb18030_bin 和 latin1_bin。
+* OceanBase 数据库支持的排序方式如下表所示。
+  
+  |        字符序         |  所属字符集  |                      说明                       |
+  |--------------------|---------|-----------------------------------------------|
+  | utf8mb4_general_ci | utf8mb4 | 使用通用排序规则。                                     |
+  | utf8mb4_bin        | utf8mb4 | 使用二进制排序规则。                                    |
+  | utf8mb4_unicode_ci | utf8mb4 | 使用基于 Unicode Collation Algorithm (UCA) 的排序规则。 |
+  | binary             | binary  | 使用二进制排序规则。                                    |
+  | gbk_chinese_ci     | gbk     | 使用中文语言排序规则。                                   |
+  | gbk_bin            | gbk     | 使用二进制排序规则。                                    |
+  | utf16_general_ci   | utf16   | 使用通用排序规则。                                     |
+  | utf16_bin          | utf16   | 使用二进制排序规则。                                    |
+  | utf16_unicode_ci   | utf16   | 使用基于 Unicode Collation Algorithm (UCA) 的排序规则。 |
+  | gb18030_chinese_ci | gb18030 | 使用中文语言排序规则。                                   |
+  | gb18030_bin        | gb18030 | 使用二进制排序规则。                                    |
+  | latin1_bin         | latin1  | latin1	使用二进制排序规则。|
+  | gb18030_2022_bin        | gb18030_2022 | 使用二进制排序规则。Oracle 模式下该字符集的默认字符序。 |
+  | gb18030_2022_chinese_ci | gb18030_2022 | 使用拼音排序规则。不区分大小写。 |
+  | gb18030_2022_chinese_cs | gb18030_2022 | 使用拼音排序规则。区分大小写。  |
+  | gb18030_2022_radical_ci | gb18030_2022 | 使用部首笔画排序规则。不区分大小写。|  
+  | gb18030_2022_radical_cs | gb18030_2022 | 使用部首笔画排序规则。区分大小写。  |  
+  | gb18030_2022_stroke_ci  | gb18030_2022 | 使用笔画排序规则。不区分大小写。  |  
+  | gb18030_2022_stroke_cs  | gb18030_2022 | 使用笔画排序规则。区分大小写。  |
+ 
+
 
 ## 数据库对象管理
 
