--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/1.basic-elements-of-mysql-mode/3.character-set-and-collation-of-mysql-mode/3.collation-of-mysql-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/1.basic-elements-of-mysql-mode/3.character-set-and-collation-of-mysql-mode/3.collation-of-mysql-mode.md
@@ -19,6 +19,13 @@ OceanBase 数据库目前支持的字符序如下表所示。
 | gb18030_bin        | gb18030 | 使用二进制排序规则。                                    |
 | latin1_swedish_ci  | latin1  | 使用瑞典语/芬兰语排序规则。|
 | latin1_bin         | latin1  | latin1	使用二进制排序规则。|
+| gb18030_2022_bin        | gb18030_2022 | 使用二进制排序规则。 |
+| gb18030_2022_chinese_ci | gb18030_2022 | 使用拼音排序规则。不区分大小写。MySQL 模式下该字符集的默认字符序。 |
+| gb18030_2022_chinese_cs | gb18030_2022 | 使用拼音排序规则。区分大小写。  |
+| gb18030_2022_radical_ci | gb18030_2022 | 使用部首笔画排序规则。不区分大小写。|  
+| gb18030_2022_radical_cs | gb18030_2022 | 使用部首笔画排序规则。区分大小写。  |  
+| gb18030_2022_stroke_ci  | gb18030_2022 | 使用笔画排序规则。不区分大小写。  |  
+| gb18030_2022_stroke_cs  | gb18030_2022 | 使用笔画排序规则。区分大小写。  |
 
   <main id="notice" type='explain'>
     <h4>说明</h4>
@@ -32,24 +39,31 @@ OceanBase 数据库目前支持的字符序如下表所示。
 
 ```sql
 obclient> SHOW COLLATION;
-+--------------------+---------+-----+---------+----------+---------+
-| Collation          | Charset | Id  | Default | Compiled | Sortlen |
-+--------------------+---------+-----+---------+----------+---------+
-| utf8mb4_general_ci | utf8mb4 |  45 | Yes     | Yes      |       1 |
-| utf8mb4_bin        | utf8mb4 |  46 |         | Yes      |       1 |
-| binary             | binary  |  63 | Yes     | Yes      |       1 |
-| gbk_chinese_ci     | gbk     |  28 | Yes     | Yes      |       1 |
-| gbk_bin            | gbk     |  87 |         | Yes      |       1 |
-| utf16_general_ci   | utf16   |  54 | Yes     | Yes      |       1 |
-| utf16_bin          | utf16   |  55 |         | Yes      |       1 |
-| utf8mb4_unicode_ci | utf8mb4 | 224 |         | Yes      |       1 |
-| utf16_unicode_ci   | utf16   | 101 |         | Yes      |       1 |
-| gb18030_chinese_ci | gb18030 | 248 | Yes     | Yes      |       1 |
-| gb18030_bin        | gb18030 | 249 |         | Yes      |       1 |
-| latin1_swedish_ci  | latin1  |   8 | Yes     | Yes      |       1 |
-| latin1_bin         | latin1  |  47 |         | Yes      |       1 |
-+--------------------+---------+-----+---------+----------+---------+
-11 rows in set 
++-------------------------+--------------+-----+---------+----------+---------+
+| Collation               | Charset      | Id  | Default | Compiled | Sortlen |
++-------------------------+--------------+-----+---------+----------+---------+
+| utf8mb4_general_ci      | utf8mb4      |  45 | Yes     | Yes      |       1 |
+| utf8mb4_bin             | utf8mb4      |  46 |         | Yes      |       1 |
+| binary                  | binary       |  63 | Yes     | Yes      |       1 |
+| gbk_chinese_ci          | gbk          |  28 | Yes     | Yes      |       1 |
+| gbk_bin                 | gbk          |  87 |         | Yes      |       1 |
+| utf16_general_ci        | utf16        |  54 | Yes     | Yes      |       1 |
+| utf16_bin               | utf16        |  55 |         | Yes      |       1 |
+| utf8mb4_unicode_ci      | utf8mb4      | 224 |         | Yes      |       1 |
+| utf16_unicode_ci        | utf16        | 101 |         | Yes      |       1 |
+| gb18030_chinese_ci      | gb18030      | 248 | Yes     | Yes      |       1 |
+| gb18030_bin             | gb18030      | 249 |         | Yes      |       1 |
+| latin1_swedish_ci       | latin1       |   8 | Yes     | Yes      |       1 |
+| latin1_bin              | latin1       |  47 |         | Yes      |       1 |
+| gb18030_2022_bin        | gb18030_2022 | 216 |         | Yes      |       1 |
+| gb18030_2022_chinese_ci | gb18030_2022 | 217 | Yes     | Yes      |       1 |
+| gb18030_2022_chinese_cs | gb18030_2022 | 218 |         | Yes      |       1 |
+| gb18030_2022_radical_ci | gb18030_2022 | 219 |         | Yes      |       1 |
+| gb18030_2022_radical_cs | gb18030_2022 | 220 |         | Yes      |       1 |
+| gb18030_2022_stroke_ci  | gb18030_2022 | 221 |         | Yes      |       1 |
+| gb18030_2022_stroke_cs  | gb18030_2022 | 222 |         | Yes      |       1 |
++-------------------------+--------------+-----+---------+----------+---------+
+20 rows in set
 ```
 
 字符序具有以下一般特征：
@@ -59,3 +73,5 @@ obclient> SHOW COLLATION;
 * 每个字符集都有一个默认的字符序。`SHOW CHARACTER SET` 语句指示每个字符集的默认字符序。`SHOW COLLATION` 语句有一列指示每个字符序是否是其字符集的默认值（如果是则为 Yes，否则为空）。
 
 * 字符序名称以与它们相关联的字符集的名称开头，通常后跟一个或多个表示其他字符序特征的后缀。
+
+
