--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/1.basic-elements-of-mysql-mode/3.character-set-and-collation-of-mysql-mode/6.column-level-character-set-and-collations-of-mysql-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/1.basic-elements-of-mysql-mode/3.character-set-and-collation-of-mysql-mode/6.column-level-character-set-and-collations-of-mysql-mode.md
@@ -35,6 +35,7 @@ obclient> ALTER TABLE t MODIFY
 Query OK, 0 rows affected 
 ```
 
+
 ## 选择列的字符集和字符序
 
 OceanBase 数据库通过以下方式选择列的字符集和字符序：
@@ -48,6 +49,39 @@ OceanBase 数据库通过以下方式选择列的字符集和字符序：
 * 如果既不指定 `CHARACTER SET` 也不指定 `COLLATE`，则使用表的字符集和字符序。
 
 如果在各个列定义中未指定列字符集和字符序，则表的字符集和字符序将用作列定义的默认值。
+
+此外，OceanBase 数据库 MySQL 模式下设置列的 `COLLATE` 后直接 `ORDER BY` 即可按照所设置的字符序排列，也可以在 `ORDER BY` 后使用 `COLLATE` 设置相同字符集的不同字符序。
+
+```shell
+obclient> CREATE TABLE t(a VARCHAR(10) COLLATE gb18030_2022_radical_ci);
+Query OK, 0 rows affected 
+
+obclient> INSERT INTO t VALUES('a'),('A'),('b'),('B');
+Query OK, 4 rows affected 
+Records: 4  Duplicates: 0  Warnings: 0
+
+obclient> SELECT a FROM t ORDER BY a;
++------+
+| a    |
++------+
+| a    |
+| A    |
+| b    |
+| B    |
++------+
+4 rows in set 
+
+obclient> SELECT a FROM t ORDER BY a COLLATE gb18030_2022_chinese_cs;
++------+
+| a    |
++------+
+| A    |
+| B    |
+| a    |
+| b    |
++------+
+4 rows in set 
+```
 
 ## 列字符集转换条件
 
