--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/1.basic-elements-of-mysql-mode/3.character-set-and-collation-of-mysql-mode/7.character-expression-character-sets-and-collations-of-mysql-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/1.basic-elements-of-mysql-mode/3.character-set-and-collation-of-mysql-mode/7.character-expression-character-sets-and-collations-of-mysql-mode.md
@@ -24,6 +24,28 @@ obclient> SELECT _utf8mb4'abc' COLLATE utf8mb4_unicode_ci;
 1 row in set 
 ```
 
+在指定 SQL 中字符串常量的字符集时，对于 `gb18030_2022` ，在十六进制数前添加 `_gb18030_2022` 可以将该编码转换为 `gb18030_2022` 下的相应字符。在字符串前添加 `_gb18030_2022` 可以指定该字符串的字符集为 `gb18030_2022`。
+
+```shell
+obclient> SELECT _gb18030_2022 0xCDE5 AS c FROM DUAL;
++-----+
+| c   |
++-----+
+| 湾  |
++-----+
+1 row in set 
+
+
+obclient> SELECT _gb18030_2022 '湾' AS c FROM DUAL;
++-----+
+| c   |
++-----+
+| 湾  |
++-----+
+1 row in set 
+```
+
+
 ## 选择字符表达式的字符集和字符序
 
 OceanBase 数据库通过以下方式选择字符表达式的字符集和字符序：
