420 Add Configuration Item

--- a/zh-CN/7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/135.memory_chunk_cache_size.md
+++ b/zh-CN/7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/135.memory_chunk_cache_size.md
@@ -1,6 +1,6 @@
 # memory_chunk_cache_size 
 
-memory_chunk_cache_size 用于设置内存分配器缓存的内存块容量。
+memory_chunk_cache_size 用于设置内存分配器缓存的内存块容量。配置时需说明单位，默认单位为 MB。
 
 
 |      **属性**      |  **描述**   |
