--- a/zh-CN/7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/15.backup_data_file_size.md
+++ b/zh-CN/7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/15.backup_data_file_size.md
@@ -1,6 +1,6 @@
 # backup_data_file_size
 
-`backup_data_file_size` 用于设置备份数据文件的容量。
+`backup_data_file_size` 用于设置备份数据文件的容量。配置时需说明单位，默认单位为 MB。
 
 |      **属性**      |   **描述**    |
 |------------------|-------------|
