--- a/zh-CN/7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/162.px_task_size.md
+++ b/zh-CN/7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/162.px_task_size.md
@@ -1,7 +1,7 @@
 px_task_size 
 =================================
 
-px_task_size 用于设置 SQL 并行查询引擎每个任务处理的数据量大小。
+px_task_size 用于设置 SQL 并行查询引擎每个任务处理的数据量大小。配置时需说明单位，默认单位为 MB。
 
 
 |      **属性**      |  **描述**   |
