--- a/zh-CN/7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/196.stack_size.md
+++ b/zh-CN/7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/196.stack_size.md
@@ -1,7 +1,7 @@
 stack_size
 ===============================
 
-`stack_size` 用于设置程序函数调用栈的大小。
+`stack_size` 用于设置程序函数调用栈的大小。配置时需说明单位，默认单位为 MB。
 
 <main id="notice" type='explain'>
   <h4>说明</h4>
