--- a/zh-CN/7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/204.syslog_io_bandwidth_limit.md
+++ b/zh-CN/7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/204.syslog_io_bandwidth_limit.md
@@ -1,7 +1,7 @@
 # syslog_io_bandwidth_limit 
 
 
-syslog_io_bandwidth_limit 用于设置系统日志所能占用的磁盘 IO 带宽上限，超过带宽上限容量的系统日志将被丢弃。
+syslog_io_bandwidth_limit 用于设置系统日志所能占用的磁盘 IO 带宽上限，超过带宽上限容量的系统日志将被丢弃。配置时需说明单位，默认单位为 MB。
 
 
 |      **属性**      | **描述** |
