--- a/zh-CN/7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/210.tablet_size.md
+++ b/zh-CN/7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/210.tablet_size.md
@@ -1,7 +1,7 @@
 tablet_size 
 ================================
 
-tablet_size 用于设置分区内部并行处理（合并、查询等）时每个分片的大小。
+tablet_size 用于设置分区内部并行处理（合并、查询等）时每个分片的大小。配置时需说明单位，默认单位为 MB。
 
 
 |      **属性**      |  **描述**  |
