--- a/zh-CN/7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/54.datafile_size.md
+++ b/zh-CN/7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/54.datafile_size.md
@@ -1,7 +1,7 @@
 datafile_size 
 ==================================
 
-`datafile_size` 用于设置数据文件的大小。
+`datafile_size` 用于设置数据文件的大小。配置时需说明单位，默认单位为 MB。
 
 
 |      **属性**      |  **描述**   |
