--- a/zh-CN/7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/62.dtl_buffer_size.md
+++ b/zh-CN/7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/62.dtl_buffer_size.md
@@ -1,7 +1,7 @@
 dtl_buffer_size 
 ====================================
 
-dtl_buffer_size 用于设置 SQL 数据传输模块使用的缓存大小。
+dtl_buffer_size 用于设置 SQL 数据传输模块使用的缓存大小。配置时需说明单位，默认单位为 MB。
 
 
 |      **属性**      |   **描述**    |
