--- a/zh-CN/7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/138.memory_reserved.md
+++ b/zh-CN/7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/138.memory_reserved.md
@@ -1,6 +1,6 @@
 # memory_reserved
 
-`memory_reserved` 用于设置系统底层模块预留的内存容量大小，为了保障一些基础模块能够正常运行，一定会多预留 `memory_reserved` 以供使用。
+`memory_reserved` 用于设置系统底层模块预留的内存容量大小，为了保障一些基础模块能够正常运行，一定会多预留 `memory_reserved` 以供使用。配置时需说明单位，默认单位为 MB。
 
 |      **属性**      |   **描述**   |
 |------------------|------------|
