--- a/zh-CN/7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/160.plan_cache_high_watermark.md
+++ b/zh-CN/7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/160.plan_cache_high_watermark.md
@@ -1,6 +1,6 @@
 # plan_cache_high_watermark 
 
-plan_cache_high_watermark 用于设置执行计划缓存占用内存的阈值，如果超过该阈值时将触发自动淘汰。
+plan_cache_high_watermark 用于设置执行计划缓存占用内存的阈值，如果超过该阈值时将触发自动淘汰。配置时需说明单位，默认单位为 MB。
 
   <main id="notice" type='explain'>
     <h4>说明</h4>
