--- a/zh-CN/7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/174.rootservice_memory_limit.md
+++ b/zh-CN/7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/174.rootservice_memory_limit.md
@@ -1,6 +1,6 @@
 # rootservice_memory_limit 
 
-rootservice_memory_limit 用于设置 Root Service 的最大内存容量限制。
+rootservice_memory_limit 用于设置 Root Service 的最大内存容量限制。配置时需说明单位，默认单位为 MB。
 
 
 |      **属性**      |  **描述**   |
