--- a/zh-CN/7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/237.log_disk_size.md
+++ b/zh-CN/7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/237.log_disk_size.md
@@ -1,6 +1,6 @@
 # log_disk_size
 
-`log_disk_size` 用于设置 Redo 日志磁盘的大小。
+`log_disk_size` 用于设置 Redo 日志磁盘的大小。配置时需说明单位，默认单位为 MB。
 
 <main id="notice" type='explain'>
   <h4>说明</h4>
