--- a/zh-CN/7.reference/5.system-reference/1.system-configuration-items/4.tenant-level-configuration-items/33.sql_work_area.md
+++ b/zh-CN/7.reference/5.system-reference/1.system-configuration-items/4.tenant-level-configuration-items/33.sql_work_area.md
@@ -1,7 +1,7 @@
 sql_work_area 
 ==================================
 
-`sql_work_area` 用于设置租户的工作区内存。
+`sql_work_area` 用于设置租户的工作区内存。配置时需说明单位，默认单位为 MB。
 
   <main id="notice" type='explain'>
     <h4>说明</h4>
